исправлены подмены спецсимволов на &gt; &lt; &amp;

--- a/informarch/aeroqsp_0024.html
+++ b/informarch/aeroqsp_0024.html
@@ -20,14 +20,14 @@
 <span class="em_BLCK">AeroQSP</span> - специальная версия плеера QSP на технологии Flash, позволяющая играть и локально, и в браузере.
 </p>
 <p>
-Отличия от <a href="https://qsp.org/index.php?option=com_content&view=article&id=64&Itemid=56" style="text-decoration:none;" class="emFOLD">классической версии</a> плеера:
+Отличия от <a href="https://qsp.org/index.php?option=com_content&amp;view=article&amp;id=64&amp;Itemid=56" style="text-decoration:none;" class="emFOLD">классической версии</a> плеера:
 </p>
 <ul>
 <li>Расширенные возможности графического оформления</li>
 <li>Возможность играть в браузере</li>
 </ul>
 <p>
-Проигрыватель AeroQSP для Windows: <a href="https://qsp.org/index.php?option=com_content&view=article&id=64&Itemid=56" style="text-decoration:none;" class="emFOLD">AeroQSP Shell</a>
+Проигрыватель AeroQSP для Windows: <a href="https://qsp.org/index.php?option=com_content&amp;view=article&amp;id=64&amp;Itemid=56" style="text-decoration:none;" class="emFOLD">AeroQSP Shell</a>
 </p>
 <p>
 Исходный код: http://svn2.assembla.com/svn/qsp/trunk
@@ -39,13 +39,13 @@
 Инструкция по использованию AeroQSP: https://qsp.org/misc/aero/readme.txt
 </p>
 <p>
-Тема для вопросов на форуме: <a href="https://qsp.org/index.php?option=com_agora&task=topic&id=14&Itemid=57" style="text-decoration:none;" class="emFOLD">AeroQSP: вопросы</a>
+Тема для вопросов на форуме: <a href="https://qsp.org/index.php?option=com_agora&amp;task=topic&amp;id=14&amp;Itemid=57" style="text-decoration:none;" class="emFOLD">AeroQSP: вопросы</a>
 </p>
 <p>
-Набор шрифтов специально для разработки в AeroQSP: <a href="https://qsp.org/index.php?option=com_agora&task=topic&id=328&Itemid=57" style="text-decoration:none;" class="emFOLD">Набор swf-шрифтов и утилита для их тестирования</a>
+Набор шрифтов специально для разработки в AeroQSP: <a href="https://qsp.org/index.php?option=com_agora&amp;task=topic&amp;id=328&amp;Itemid=57" style="text-decoration:none;" class="emFOLD">Набор swf-шрифтов и утилита для их тестирования</a>
 </p>
 <p>
-Пакет для сборки stand-alone версий игр на AeroQSP: <a href="https://qsp.org/index.php?option=com_content&view=article&id=117&Itemid=56" style="text-decoration:none;" class="emFOLD">Stand-alone сборка игр на AeroQSP</a>
+Пакет для сборки stand-alone версий игр на AeroQSP: <a href="https://qsp.org/index.php?option=com_content&amp;view=article&amp;id=117&amp;Itemid=56" style="text-decoration:none;" class="emFOLD">Stand-alone сборка игр на AeroQSP</a>
 </p>
 <p>
 Скриншот из игры "Город туманов":
