--- a/informarch/aeroqsp_help_0026.html
+++ b/informarch/aeroqsp_help_0026.html
@@ -134,10 +134,10 @@
 <span class="em_BLCK">ACTIONS_H</span> — высота списка действий. Значение по-умолчанию: <span class="em_BLCK">169</span>.
 </p>
 <p>
-<span class="em_BLCK">$ACTION_FORMAT</span> — формат действия. служебные поля %TEXT%, %IMAGE% (путь к файлу картинки). Значение по-умолчанию: <span class="em_BLCK">"<table><tr><td><img src='%IMAGE%'/></td><td style='width:100%;'>%TEXT%</td></tr></table>"</span>.
+<span class="em_BLCK">$ACTION_FORMAT</span> — формат действия. служебные поля %TEXT%, %IMAGE% (путь к файлу картинки). Значение по-умолчанию: <span class="em_BLCK">"&lt;table&gt;&lt;tr&gt;&lt;td&gt;&lt;img src='%IMAGE%'/&gt;&lt;/td&gt;&lt;td style='width:100%;'&gt;%TEXT%&lt;/td&gt;&lt;/tr&gt;&lt;/table&gt;"</span>.
 </p>
 <p>
-<span class="em_BLCK">$SEL_ACTION_FORMAT</span> — формат выделенного действия. служебные поля %TEXT%, %IMAGE% (путь к файлу картинки). Значение по-умолчанию: <span class="em_BLCK">"<table><tr><td><img src='%IMAGE%'/></td><td style='width:100%;color:#0000FF;'>%TEXT%</td></tr></table>"</span>.
+<span class="em_BLCK">$SEL_ACTION_FORMAT</span> — формат выделенного действия. служебные поля %TEXT%, %IMAGE% (путь к файлу картинки). Значение по-умолчанию: <span class="em_BLCK">"&lt;table&gt;&lt;tr&gt;&lt;td&gt;&lt;img src='%IMAGE%'/&gt;&lt;/td&gt;&lt;td style='width:100%;color:#0000FF;'&gt;%TEXT%&lt;/td&gt;&lt;/tr&gt;&lt;/table&gt;"</span>.
 </p>
 <p>
 <span class="em_BLCK">$ACTIONS_BACKIMAGE</span> — фоновая картинка для списка действий. Значение по-умолчанию: <span class="em_BLCK">""</span>.
@@ -155,10 +155,10 @@
 <span class="em_BLCK">OBJECTS_H</span> — высота списка предметов. Значение по-умолчанию: <span class="em_BLCK">389</span>.
 </p>
 <p>
-<span class="em_BLCK">$OBJECT_FORMAT</span> — формат предмета. служебные поля %TEXT%, %IMAGE% (путь к файлу картинки). Значение по-умолчанию: <span class="em_BLCK">"<table><tr><td><img src='%IMAGE%'/></td><td style='width:100%;'>%TEXT%</td></tr></table>"</span>.
+<span class="em_BLCK">$OBJECT_FORMAT</span> — формат предмета. служебные поля %TEXT%, %IMAGE% (путь к файлу картинки). Значение по-умолчанию: <span class="em_BLCK">"&lt;table&gt;&lt;tr&gt;&lt;td&gt;&lt;img src='%IMAGE%'/&gt;&lt;/td&gt;&lt;td style='width:100%;'&gt;%TEXT%&lt;/td&gt;&lt;/tr&gt;&lt;/table&gt;"</span>.
 </p>
 <p>
-<span class="em_BLCK">$SEL_OBJECT_FORMAT</span> — формат выделенного предмета. служебные поля %TEXT%, %IMAGE% (путь к файлу картинки). Значение по-умолчанию: <span class="em_BLCK">"<table><tr><td><img src='%IMAGE%'/></td><td style='width:100%;color:#0000FF;'>%TEXT%</td></tr></table>"</span>.
+<span class="em_BLCK">$SEL_OBJECT_FORMAT</span> — формат выделенного предмета. служебные поля %TEXT%, %IMAGE% (путь к файлу картинки). Значение по-умолчанию: <span class="em_BLCK">"&lt;table&gt;&lt;tr&gt;&lt;td&gt;&lt;img src='%IMAGE%'/&gt;&lt;/td&gt;&lt;td style='width:100%;color:#0000FF;'&gt;%TEXT%&lt;/td&gt;&lt;/tr&gt;&lt;/table&gt;"</span>.
 </p>
 <p>
 <span class="em_BLCK">$OBJECTS_BACKIMAGE</span> — фоновая картинка для списка предметов. Значение по-умолчанию: <span class="em_BLCK">""</span>.
@@ -326,10 +326,10 @@
 <span class="em_BLCK">MENU_Y</span> — Y-позиция всплывающего меню (если X или Y меньше 0, то показывает меню в позиции курсора мыши). Значение по-умолчанию: <span class="em_BLCK">-1</span>.
 </p>
 <p>
-<span class="em_BLCK">$MENU_FORMAT</span> — формат пункта всплывающего меню. служебные поля %TEXT%, %IMAGE% (путь к файлу картинки). Значение по-умолчанию: <span class="em_BLCK">"<table><tr><td><img src='%IMAGE%'/></td><td style='width:100%;'>%TEXT%</td></tr></table>"</span>.
+<span class="em_BLCK">$MENU_FORMAT</span> — формат пункта всплывающего меню. служебные поля %TEXT%, %IMAGE% (путь к файлу картинки). Значение по-умолчанию: <span class="em_BLCK">"&lt;table&gt;&lt;tr&gt;&lt;td&gt;&lt;img src='%IMAGE%'/&gt;&lt;/td&gt;&lt;td style='width:100%;'&gt;%TEXT%&lt;/td&gt;&lt;/tr&gt;&lt;/table&gt;"</span>.
 </p>
 <p>
-<span class="em_BLCK">$SEL_MENU_FORMAT</span> — формат выделенного пункта всплывающего меню. служебные поля %TEXT%, %IMAGE% (путь к файлу картинки). Значение по-умолчанию: <span class="em_BLCK">"<table><tr><td><img src='%IMAGE%'/></td><td style='width:100%;color:#0000FF;'>%TEXT%</td></tr></table>"</span>.
+<span class="em_BLCK">$SEL_MENU_FORMAT</span> — формат выделенного пункта всплывающего меню. служебные поля %TEXT%, %IMAGE% (путь к файлу картинки). Значение по-умолчанию: <span class="em_BLCK">"&lt;table&gt;&lt;tr&gt;&lt;td&gt;&lt;img src='%IMAGE%'/&gt;&lt;/td&gt;&lt;td style='width:100%;color:#0000FF;'&gt;%TEXT%&lt;/td&gt;&lt;/tr&gt;&lt;/table&gt;"</span>.
 </p>
 <p>
 <span class="em_BLCK">MENU_LIST_X</span> — X-позиция элементов списка меню (при FIXED_SIZE_MENU). Значение по-умолчанию: <span class="em_BLCK">4</span>.
