--- a/informarch/aeroqsp_instr_0025.html
+++ b/informarch/aeroqsp_instr_0025.html
@@ -80,7 +80,7 @@ SET&nbsp;AEROQSP=AeroQSP.exe
 Смотреть ответ на ютубе: <a href="https://youtu.be/UqcQhd-HFzw" style="text-decoration:none;" class="emFOLD">https://youtu.be/UqcQhd-HFzw</a>
 </p>
 <p>
-NickoAilus. #5647 18.Май.19 10:50:55: <a href="https://qsp.org/index.php?option=com_agora&task=topic&id=40&p=226&prc=25&Itemid=57#p25202" style="text-decoration:none;" class="emFOLD">Что надо сделать с QGen, чтобы он заработал на AeroQSP?</a>
+NickoAilus. #5647 18.Май.19 10:50:55: <a href="https://qsp.org/index.php?option=com_agora&amp;task=topic&amp;id=40&amp;p=226&amp;prc=25&amp;Itemid=57#p25202" style="text-decoration:none;" class="emFOLD">Что надо сделать с QGen, чтобы он заработал на AeroQSP?</a>
 </p>
 <p>
 Инструкция по работе с AeroQSP: <a href="https://qsp.org/misc/aero/help.htm" style="text-decoration:none;" class="emFOLD">https://qsp.org/misc/aero/help.htm</a>
@@ -89,19 +89,19 @@ NickoAilus. #5647 18.Май.19 10:50:55: <a href="https://qsp.org/index.php?opti
 Инструкция по запуску AeroQSP из QGen: <a href="https://qsp.org/misc/aero/readme.txt" style="text-decoration:none;" class="emFOLD">https://qsp.org/misc/aero/readme.txt</a>
 </p>
 <p>
-Запуск AeroQSP из Quest Generator: <a href="https://qsp.org/index.php?option=com_agora&task=topic&id=297&Itemid=57" style="text-decoration:none;" class="emFOLD">Тема на форуме QSP.su</a>
+Запуск AeroQSP из Quest Generator: <a href="https://qsp.org/index.php?option=com_agora&amp;task=topic&amp;id=297&amp;Itemid=57" style="text-decoration:none;" class="emFOLD">Тема на форуме QSP.su</a>
 </p>
 <p>
-Stand-alone сборка на AeroQSP: <a href="https://qsp.org/index.php?option=com_content&view=article&id=117&Itemid=56" style="text-decoration:none;" class="emFOLD">статья на QSP.su</a>
+Stand-alone сборка на AeroQSP: <a href="https://qsp.org/index.php?option=com_content&amp;view=article&amp;id=117&amp;Itemid=56" style="text-decoration:none;" class="emFOLD">статья на QSP.su</a>
 </p>
 <p>
-Lisichka. #3849 05.Фев.16 00:51:59: <a href="https://qsp.org/index.php?option=com_agora&task=topic&id=40&p=154&prc=25&Itemid=57#p22877" style="text-decoration:none;" class="emFOLD">можно ли как-то в аэру добавить второе окно доп описания?</a>
+Lisichka. #3849 05.Фев.16 00:51:59: <a href="https://qsp.org/index.php?option=com_agora&amp;task=topic&amp;id=40&amp;p=154&amp;prc=25&amp;Itemid=57#p22877" style="text-decoration:none;" class="emFOLD">можно ли как-то в аэру добавить второе окно доп описания?</a>
 </p>
 <p>
-Mira. #4952 28.Фев.17 22:49:27: <a href="https://qsp.org/index.php?option=com_agora&task=topic&id=40&p=199&prc=25&Itemid=57#p25311" style="text-decoration:none;" class="emFOLD">Создала на аеро свой хелоуворд, через standalone не работает, swf создается, грузится и черный экран дальше</a>
+Mira. #4952 28.Фев.17 22:49:27: <a href="https://qsp.org/index.php?option=com_agora&amp;task=topic&amp;id=40&amp;p=199&amp;prc=25&amp;Itemid=57#p25311" style="text-decoration:none;" class="emFOLD">Создала на аеро свой хелоуворд, через standalone не работает, swf создается, грузится и черный экран дальше</a>
 </p>
 <p>
-BlooDwareN. #5182 10.Янв.18 22:00:22: <a href="https://qsp.org/index.php?option=com_agora&task=topic&id=40&p=208&prc=25&Itemid=57#p26298" style="text-decoration:none;" class="emFOLD">как установить AeroQSP!</a>
+BlooDwareN. #5182 10.Янв.18 22:00:22: <a href="https://qsp.org/index.php?option=com_agora&amp;task=topic&amp;id=40&amp;p=208&amp;prc=25&amp;Itemid=57#p26298" style="text-decoration:none;" class="emFOLD">как установить AeroQSP!</a>
 </p>
 <div style="display:flex;justify-content:space-between;"><div><a href="https://aleksversus.github.io/howdo_faq/informarch/aeroqsp_0024.html" class="emHREFTT">&lt; Назад, к странице 38</a></div><div><a href="https://aleksversus.github.io/howdo_faq/informarch/aeroqsp_help_0026.html" class="emHREFTT">Вперёд, к странице 40 &gt;</a></div></div>
 <!-- body end -->
