--- a/informarch/aeroqsp_uchebnik_0028.html
+++ b/informarch/aeroqsp_uchebnik_0028.html
@@ -27,7 +27,7 @@
 Для работы вам потребуются два приложения: собственно проигрыватель AERO, в котором будет запускаться ваша программа (далее «плеер» или «проигрыватель») и утилита редактирования <span class="em_BLCK">.qsp</span> файла - QGen (далее «редактор»).
 </p>
 <p>
-Начнем с ознакомления с их интерфейсом. Откройте редактор. Слева вы видите окно со списком локаций. Если вы еще не начинали никакого проекта, оно должно быть пустым. Если там что-то есть, можно начать заново, нажав "Ctr+N" или выбрав пункт меню "Игра > Новая".
+Начнем с ознакомления с их интерфейсом. Откройте редактор. Слева вы видите окно со списком локаций. Если вы еще не начинали никакого проекта, оно должно быть пустым. Если там что-то есть, можно начать заново, нажав "Ctr+N" или выбрав пункт меню "Игра &gt; Новая".
 </p>
 <p>
 Давайте создадим первую локацию и заодно узнаем, что это за зверь и зачем он нужен. Для создания локации нажмите "F7" или кликните на большой зеленый крестик в левой части верхнего меню. Вы увидите диалог, который предложит ввести название локации. Назовем ее "Начало".
@@ -270,7 +270,7 @@
 <span class="Monokai-Koperator">END</span><br/>
 </div>
 <p>
-Теперь опробуйте, что получилось. Как видите вместо слова <span class="em_BLCK"><<заначка>></span>, игра выдает цифру <span class="em_BLCK">100</span>. Как это получается? Очень просто. Если вы заключите переменную в такие скобки <span class="em_BLCK"><< >></span>, то в тексте на этом месте отразится текущее значение переменной.
+Теперь опробуйте, что получилось. Как видите вместо слова <span class="em_BLCK">&lt;&lt;заначка&gt;&gt;</span>, игра выдает цифру <span class="em_BLCK">100</span>. Как это получается? Очень просто. Если вы заключите переменную в такие скобки <span class="em_BLCK">&lt;&lt; &gt;&gt;</span>, то в тексте на этом месте отразится текущее значение переменной.
 </p>
 <p>
 Но зачем нам заначка, из которой нельзя немножечко взять? Незачем! Давайте обеспечим нашему герою такую возможность. Для этого придется переделать код на более сложный:
@@ -304,7 +304,7 @@
 Первое неизвестное – оператор <span class="em_BLCK">CLA</span>. Тут все просто – это команда "очистить список действий". Как только мы выберем действие «Заглянуть в тумбочку», у нас пропадет само это действие и действие «выйти в коридор» - т.е. все, что имелось в списке действий. Между прочим, действия, если нужно, можно удалять и по одному. Для этого надо использовать команду такого типа: <span class="em_BLCK">DELACT 'Заглянуть в тумбочку</span>'. Но сейчас нам проще снести весь список действий целиком.
 </p>
 <p>
-Дальше идет не совсем понятная строчка <span class="em_BLCK">IF заначка > 0:</span> — это команда с проверкой условия. Для проигрывателя она означает следующее: ЕСЛИ значение переменной <span class="em_BLCK">заначка</span> больше нуля, немедленно сделай все, что следует после двоеточия и вплоть до закрывающего оператора END. Как видите, это похоже на действие, только тут игроку не надо ничего выбирать. Программа сама проверяет условие и если условие верно, делает то что требуется.
+Дальше идет не совсем понятная строчка <span class="em_BLCK">IF заначка &gt; 0:</span> — это команда с проверкой условия. Для проигрывателя она означает следующее: ЕСЛИ значение переменной <span class="em_BLCK">заначка</span> больше нуля, немедленно сделай все, что следует после двоеточия и вплоть до закрывающего оператора END. Как видите, это похоже на действие, только тут игроку не надо ничего выбирать. Программа сама проверяет условие и если условие верно, делает то что требуется.
 </p>
 <p>
 Между <span class="em_BLCK">IF</span> и закрывающим его <span class="em_BLCK">END</span> идет действие «Взять денег». Таким образом, если заначка будет равна 0, то мы просто не увидим этого действия, т.к. условие не будет выполнено. И действительно, как можно взять деньги, которых нет?
@@ -382,7 +382,7 @@
 <span class="Monokai-Koperator">END</span><br/>
 </div>
 <p>
-Теперь игрок может ввести любое нравящееся ему имя, а мы можем использовать это имя, где захотим по ходу игры (при помощи конструкции <span class="em_BLCK"><<$name>></span>).
+Теперь игрок может ввести любое нравящееся ему имя, а мы можем использовать это имя, где захотим по ходу игры (при помощи конструкции <span class="em_BLCK">&lt;&lt;$name&gt;&gt;</span>).
 </p>
 <p>
 Но что если игрок ошибется и оставит поле для имени пустым? Это не вызовет сбоя в программе, конечно, но там, где мы вставим в игру имя героя, будет красоваться пустое место. А это некрасиво. Давайте добавим проверочное условие.
@@ -429,7 +429,7 @@ $кот<span class="Monokai-Operator">[</span><span class="Monokai-Numeric">3</s
 кличка&nbsp;<span class="Monokai-Operator">=</span>&nbsp;<span class="Monokai-Func">RAND</span>&nbsp;<span class="Monokai-Operator">(</span><span class="Monokai-Numeric">1</span><span class="Monokai-Operator">,</span><span class="Monokai-Numeric">3</span><span class="Monokai-Operator">)</span><br/>
 </div>
 <p>
-Оператор <span class="em_BLCK">RAND</span> случайным образом выберет число от <span class="em_BLCK">1</span> до <span class="em_BLCK">3</span> – именно этот диапазон мы указали ему в скобках. Теперь в любом месте игры, для указания клички кота, мы можем написать конструкцию вида <span class="em_BLCK"><<$кот[кличка]>></span>. И никакой возни с <span class="em_BLCK">IF/else</span> и так далее!
+Оператор <span class="em_BLCK">RAND</span> случайным образом выберет число от <span class="em_BLCK">1</span> до <span class="em_BLCK">3</span> – именно этот диапазон мы указали ему в скобках. Теперь в любом месте игры, для указания клички кота, мы можем написать конструкцию вида <span class="em_BLCK">&lt;&lt;$кот[кличка]&gt;&gt;</span>. И никакой возни с <span class="em_BLCK">IF/else</span> и так далее!
 </p>
 <p>
 Давайте-ка изучим возможности инвентаря, используя нашего замечательного именного кота. Условия такие: кот программиста настолько ленив, что не собирается передвигаться сам. Он привык, чтобы его носили на руках. Реализуем кота, как объект, который изначально находится в коридоре, который можно таскать с собой и положить в любом другом месте. А потом обратно взять и снова таскать. И так пока не надоест.
@@ -482,7 +482,7 @@ $кот<span class="Monokai-Operator">[</span><span class="Monokai-Numeric">3</s
 Естественно, номер локации должен совпадать со значением кота. Команда <span class="em_BLCK">ADDOBJ</span> – добавляет предмет, с соответствующим названием в инвентарь. Теперь мне достаточно сообщить вам, что для удаления из инвентаря используется команда <span class="em_BLCK">DELOBJ</span>, и вы сможете сами прописать вторую часть: возможность положить кота обратно.
 </p>
 <p>
-Если все получилось, то вы просто обязаны наградить себя чем-нибудь вкусненьким. Коты знают толк в поощрениях! От себя добавлю, что для того чтобы класть кота можно было использовать не только условие вида <span class="em_BLCK">IF кот = 0</span>, но и условие <span class="em_BLCK">IF OBJ 'Кот <<$кот[кличка]>></span>'. Практически любую задачу можно решить многими путями. Не приучайте себя к шаблонам – ищите оптимальный вариант для каждого случая. Это отличная зарядка для ума.
+Если все получилось, то вы просто обязаны наградить себя чем-нибудь вкусненьким. Коты знают толк в поощрениях! От себя добавлю, что для того чтобы класть кота можно было использовать не только условие вида <span class="em_BLCK">IF кот = 0</span>, но и условие <span class="em_BLCK">IF OBJ 'Кот &lt;&lt;$кот[кличка]&gt;&gt;</span>'. Практически любую задачу можно решить многими путями. Не приучайте себя к шаблонам – ищите оптимальный вариант для каждого случая. Это отличная зарядка для ума.
 </p>
 <p>
 Итак, мы можем таскать с собой кота. А можем и не таскать. Но интерактивности что-то маловато. К счастью, этому горю несложно помочь. Время познакомиться с концепцией всплывающего меню и локаций-обработчиков.
@@ -566,7 +566,7 @@ $кот<span class="Monokai-Operator">[</span><span class="Monokai-Numeric">3</s
 В результате, при каждом переходе между локациями (кроме фоновых переходов), к значению переменной <span class="em_BLCK">голод</span> будет добавляться единичка. И когда <span class="em_BLCK">голод</span> увеличится до <span class="em_BLCK">11+</span>, в окне дополнительных описаний будет появляться фраза «Вы проголодались!». А <span class="em_BLCK">CLR</span> в самом начале, нужно нам для того, чтобы эта фраза не размножалась.
 </p>
 <p>
-Только вот беда, это будет затирать наше сообщение о количестве денег в кармане! Но это не беда. Давайте перенесем код <span class="em_BLCK">PL 'В кармане: <<деньги>> руб.</span>' из локации «Комната» в локацию «переход». Лучше всего поставить ее после <span class="em_BLCK">CLR</span> и перед проверкой на голод. Тогда сначала будет отражаться количество денег, а потом (если проголодался) предупреждение о голоде.
+Только вот беда, это будет затирать наше сообщение о количестве денег в кармане! Но это не беда. Давайте перенесем код <span class="em_BLCK">PL 'В кармане: &lt;&lt;деньги&gt;&gt; руб.</span>' из локации «Комната» в локацию «переход». Лучше всего поставить ее после <span class="em_BLCK">CLR</span> и перед проверкой на голод. Тогда сначала будет отражаться количество денег, а потом (если проголодался) предупреждение о голоде.
 </p>
 <p>
 Кстати отслеживать такие переменные, как количество денег, здоровье персонажа и т.п. лучше всего именно при каждом переходе на новую локацию. Это практичнее чем вставлять такой код на каждой локации, где значение может измениться – их ведь может быть очень много!
