--- a/informarch/analizator_koda_qsp_0006.html
+++ b/informarch/analizator_koda_qsp_0006.html
@@ -35,7 +35,7 @@
 Внимание: анализатор работает только с файлом текстового формата (TXT2GAM). Поэтому для проверки вам придётся экспортировать игру в кугене.
 </p>
 <p>
-Игра -> Экспорт -> Текстовый файл формата TXT2GAM.
+Игра -&gt; Экспорт -&gt; Текстовый файл формата TXT2GAM.
 </p>
 <p>
 <a href="https://code.google.com/archive/p/qsp-analyser/downloads" style="text-decoration:none;" class="emFOLD"><span class="em_BLCK">Скачать анализатор со страницы релизов</span></a>
