--- a/informarch/dejstvie_po_usloviju_0019.html
+++ b/informarch/dejstvie_po_usloviju_0019.html
@@ -138,7 +138,7 @@
 26.Июл.11 06:51:46
 </p>
 <p>
-Оригинал в теме: <a href="https://qsp.org/index.php?option=com_agora&task=topic&id=348&Itemid=57" style="text-decoration:none;" class="emFOLD">Действие по условию</a>
+Оригинал в теме: <a href="https://qsp.org/index.php?option=com_agora&amp;task=topic&amp;id=348&amp;Itemid=57" style="text-decoration:none;" class="emFOLD">Действие по условию</a>
 </p>
 <div style="display:flex;justify-content:space-between;"><div><a href="https://aleksversus.github.io/howdo_faq/informarch/dopolnenie_inventarja_0018.html" class="emHREFTT">&lt; Назад, к странице 20</a></div><div><a href="https://aleksversus.github.io/howdo_faq/informarch/plavnoe_izmenenie_0020.html" class="emHREFTT">Вперёд, к странице 22 &gt;</a></div></div>
 <!-- body end -->
