--- a/informarch/dopolnenie_inventarja_0018.html
+++ b/informarch/dopolnenie_inventarja_0018.html
@@ -32,13 +32,13 @@
 Локации могут вызываться как функции, так и как процедуры, например вызов func('ia_obj_count', 'шишки') возвращает количество шишек в инвентаре, а вызов процедуры <span class="em_BLCK">gs 'ia_add_obj','шишки</span>' добавляет одну шишку в инвентарь.
 </p>
 <ul>
-<li><span class="em_BLCK">ia_add_obj, <предмет>, [<тип предмета>]</span>    Функция для добавления предмета в инвентарь или увеличения счетчика на 1, тип предмета задает сокращение после количества, например "руб." или "шт."
+<li><span class="em_BLCK">ia_add_obj, &lt;предмет&gt;, [&lt;тип предмета&gt;]</span>    Функция для добавления предмета в инвентарь или увеличения счетчика на 1, тип предмета задает сокращение после количества, например "руб." или "шт."
 </li>
-<li><span class="em_BLCK">ia_del_obj, <предмет>, [<тип предмета>]</span>    Функция уменьшения счетчика на 1 или для удаления предмета из инвентаря (если количество равно нулю), тип предмета задает сокращение после количества, например "руб." или "шт."
+<li><span class="em_BLCK">ia_del_obj, &lt;предмет&gt;, [&lt;тип предмета&gt;]</span>    Функция уменьшения счетчика на 1 или для удаления предмета из инвентаря (если количество равно нулю), тип предмета задает сокращение после количества, например "руб." или "шт."
 </li>
-<li><span class="em_BLCK">ia_obj_count, <предмет>, [<количество>]</span>    Функция для получения количества предметов или установки точного значения, если задано количество.
+<li><span class="em_BLCK">ia_obj_count, &lt;предмет&gt;, [&lt;количество&gt;]</span>    Функция для получения количества предметов или установки точного значения, если задано количество.
 </li>
-<li><span class="em_BLCK">ia_obj_type, <предмет></span>    Функция для получения типа предмета (сокращение указываемое после количества, например "руб." или "шт.") или задание этого сокращения.
+<li><span class="em_BLCK">ia_obj_type, &lt;предмет&gt;</span>    Функция для получения типа предмета (сокращение указываемое после количества, например "руб." или "шт.") или задание этого сокращения.
 </li>
 </ul>
 <p>
@@ -54,7 +54,7 @@ Ntropy ( ...@yandex.ru) 18.06.2009
 02.04.2010 12:50
 </p>
 <p>
-Оригинал статьи: https://qsp.org/index.php?option=com_content&view=article&id=70:qsp-inventory-advanced-lib-076&catid=36:2009-02-19-06-11-21&Itemid=76
+Оригинал статьи: https://qsp.org/index.php?option=com_content&amp;view=article&amp;id=70:qsp-inventory-advanced-lib-076&amp;catid=36:2009-02-19-06-11-21&amp;Itemid=76
 </p>
 <p>
 Скачать модуль гибкого плейлиста можно здесь: <a href="https://qsp.org/attachments/inventory_advanced.zip" style="text-decoration:none;" class="emFOLD">inventory_advanced.zip</a>
