--- a/informarch/faq_po_qsp_0001.html
+++ b/informarch/faq_po_qsp_0001.html
@@ -30,7 +30,7 @@ QSP - это система разработки текстовых игр. Пр
 </p>
 <h5 id="hochu-napisat_-svoiu-tekstovuiu-igru-s-chego-nachat_">Хочу написать свою текстовую игру, с чего начать?</h5><ol>
 <li>Если у вас еще не установлен плеер QSP, скачайте и установите <a href="https://qsp.org/attachments/players_pack_2012_12_29.exe" style="text-decoration:none;" class="emFOLD">"Набор игрока"</a>.</li>
-<li>Скачайте справку и редактор QGen со страницы <a href="https://qsp.org/index.php?option=com_content&view=article&id=57&Itemid=56" style="text-decoration:none;" class="emFOLD">"Разработчикам"</a>.</li>
+<li>Скачайте справку и редактор QGen со страницы <a href="https://qsp.org/index.php?option=com_content&amp;view=article&amp;id=57&amp;Itemid=56" style="text-decoration:none;" class="emFOLD">"Разработчикам"</a>.</li>
 <li>Откройте <a href="https://aleksversus.github.io/howdo_faq/informarch/uchebnik_po_qsp_dlja_redaktora_qgen_0004.html#informarch_qgen_teach" style="text-decoration:none;" class="emFOLD">Учебник по QSP для редактора Qgen</a> и следуйте его инструкциям.</li>
 </ol>
 <h5 id="chto-takoe-aeroqsp">Что такое AeroQSP?</h5><p>
@@ -85,7 +85,7 @@ qsp.dll, txt2gam, AeroQSP, справка - <a href="https://github.com/QSPFound
 Самый быстрый способ сделать очень точный календарь без использования циклов и громоздкого кода, это воспользоваться уже готовым решением от <strong>evp</strong>: <a href="https://aleksversus.github.io/howdo_faq/informarch/kalendar__po_metodu_schiota_julianskih_dnej_0014.html#informarch_calend_jul" style="text-decoration:none;" class="emFOLD">Календарь по методу счёта Юлианских дней</a>.
 </p>
 <p>
-<a href="https://qsp.org/index.php?option=com_agora&task=topic&id=956&Itemid=57" style="text-decoration:none;" class="emFOLD">Тема на форуме QSP</a>.
+<a href="https://qsp.org/index.php?option=com_agora&amp;task=topic&amp;id=956&amp;Itemid=57" style="text-decoration:none;" class="emFOLD">Тема на форуме QSP</a>.
 </p>
 <h5 id="kak-sdelat_-boj">Как сделать бой?</h5><p>
 Эта тема достаточно обширная и сложная, чтобы осветить её в нескольких предложениях. По этому поводу требуется написание большой статьи. Но вы можете посмотреть, как реализована простая система боя в уже существующем примере и модернизировать её.
@@ -184,7 +184,7 @@ qsp.dll, txt2gam, AeroQSP, справка - <a href="https://github.com/QSPFound
 "Как сделать?" на форуме <a href="https://qsp.org" style="text-decoration:none;" class="emFOLD">qsp.org</a>.
 </p>
 <p>
-Так же есть <a href="https://aleksversus.github.io/howdo_faq/informarch/dejstvie_po_usloviju_0019.html#informarch_ifacts" style="text-decoration:none;" class="emFOLD">синтетическая статья</a> на основе темы <a href="https://qsp.org/index.php?option=com_agora&task=topic&id=348&Itemid=57" style="text-decoration:none;" class="emFOLD">"Действие по условию"</a>.
+Так же есть <a href="https://aleksversus.github.io/howdo_faq/informarch/dejstvie_po_usloviju_0019.html#informarch_ifacts" style="text-decoration:none;" class="emFOLD">синтетическая статья</a> на основе темы <a href="https://qsp.org/index.php?option=com_agora&amp;task=topic&amp;id=348&amp;Itemid=57" style="text-decoration:none;" class="emFOLD">"Действие по условию"</a>.
 </p>
 <h5 id="kak-vstavit_-kartinku">Как вставить картинку?</h5><p>
 Со всеми возможностями работы с изображениями в классическом плеере QSP вы можете ознакомиться на странице справки <a href="https://wiki.qsp.su/help:graphics" style="text-decoration:none;" class="emFOLD">wiki.qsp.org/Графика</a>.
@@ -256,10 +256,10 @@ qsp.dll, txt2gam, AeroQSP, справка - <a href="https://github.com/QSPFound
 Более подробный ответ на этот вопрос в статье <a href="https://aleksversus.github.io/howdo_faq/pages/vozvrat_na_predyduschuju_lokatsiju_0133.html#faq_20_01" style="text-decoration:none;" class="emFOLD">"Как сделать возврат на предыдущую локацию?"</a>.
 </p>
 <p>
-Ещё более подробный ответ на этот вопрос есть в соответствующей <a href="https://qsp.org/index.php?option=com_agora&task=topic&id=751&Itemid=57&p=2" style="text-decoration:none;" class="emFOLD">теме</a> на форуме.
+Ещё более подробный ответ на этот вопрос есть в соответствующей <a href="https://qsp.org/index.php?option=com_agora&amp;task=topic&amp;id=751&amp;Itemid=57&amp;p=2" style="text-decoration:none;" class="emFOLD">теме</a> на форуме.
 </p>
 <h5 id="tiomnaia-storona-sily">Тёмная сторона силы</h5><h5 id="ispol_zovanie-massivov-mnogomernye-massivy">Использование массивов, многомерные массивы</h5><p>
-Для ответа на этот вопрос подготовлена <a href="https://aleksversus.github.io/howdo_faq/informarch/ispol_zovanie_massivov_0017.html#informarch_usethemassive" style="text-decoration:none;" class="emFOLD">синтетическая статья</a> на основе соответствующей <a href="https://qsp.org/index.php?option=com_agora&task=topic&id=93&Itemid=57" style="text-decoration:none;" class="emFOLD">темы</a>.
+Для ответа на этот вопрос подготовлена <a href="https://aleksversus.github.io/howdo_faq/informarch/ispol_zovanie_massivov_0017.html#informarch_usethemassive" style="text-decoration:none;" class="emFOLD">синтетическая статья</a> на основе соответствующей <a href="https://qsp.org/index.php?option=com_agora&amp;task=topic&amp;id=93&amp;Itemid=57" style="text-decoration:none;" class="emFOLD">темы</a>.
 </p>
 <p>
 Так же смотри <a href="http://aleksversus.narod.ru/index/peremennye_i_massivy_v_qsp/0-28" style="text-decoration:none;" class="emFOLD">статью о том, что такое массивы</a> на сайте aleksversus.narod.ru.
@@ -289,7 +289,7 @@ $somecode<span class="Monokai-Operator">=</span><span class="Monokai-Operator">{
 Подробнее можно прочесть здесь: <a href="https://aleksversus.github.io/howdo_faq/pages/qsp-keyword_0179.html#faq_80_05_curclybrackets" style="text-decoration:none;" class="emFOLD">"Фигурные скобки"</a>
 </p>
 <h5 id="modul_-olegusa-dlia-raboty-s-tablitsami-dannyh">Модуль Олегуса для работы с таблицами данных</h5><p>
-Таблицы данных — это не те таблицы, которые вы можете наблюдать на экране при использовании тега <span class="em_BLCK">"<table>"</span>. Таблицами данных называется определённый способ хранения данных в виде условных строк и столбцов.
+Таблицы данных — это не те таблицы, которые вы можете наблюдать на экране при использовании тега <span class="em_BLCK">"&lt;table&gt;"</span>. Таблицами данных называется определённый способ хранения данных в виде условных строк и столбцов.
 </p>
 <p>
 Olegus t.Gl. написал для QSP модуль работы с такими таблицами данных. Что с его помощью можно делать:
@@ -306,7 +306,7 @@ Olegus t.Gl. написал для QSP модуль работы с такими
 <li>Получать число строк в таблице (как всех, так и по заданному фильтру).</li>
 </ul>
 <p>
-Более подробно можно о модуле можно почитать на форуме qsp.org в теме <a href="https://qsp.org/index.php?option=com_agora&task=topic&id=169&Itemid=57" style="text-decoration:none;" class="emFOLD">"Модуль для работы с таблицами данных"</a>,
+Более подробно можно о модуле можно почитать на форуме qsp.org в теме <a href="https://qsp.org/index.php?option=com_agora&amp;task=topic&amp;id=169&amp;Itemid=57" style="text-decoration:none;" class="emFOLD">"Модуль для работы с таблицами данных"</a>,
 </p>
 <p>
 или на официальной странице модуля на форуме ifiction.ru в теме <a href="https://forum.ifiction.ru/viewtopic.php?id=1522" style="text-decoration:none;" class="emFOLD">"Модуль для работы с таблицами данных в QSP"</a>.
@@ -324,7 +324,7 @@ Olegus t.Gl. написал для QSP модуль работы с такими
 <li>Прописывать выполняемый код прямо в настройках пункта меню, без отсылки к другим локациям/функциям.</li>
 </ul>
 <p>
-Более подробно о модуле можно прочитать на форуме qsp.org в теме <a href="https://qsp.org/index.php?option=com_agora&task=topic&id=170&Itemid=57" style="text-decoration:none;" class="emFOLD">"Модуль для работы с меню (расширение функционала оператора "menu")"</a>,
+Более подробно о модуле можно прочитать на форуме qsp.org в теме <a href="https://qsp.org/index.php?option=com_agora&amp;task=topic&amp;id=170&amp;Itemid=57" style="text-decoration:none;" class="emFOLD">"Модуль для работы с меню (расширение функционала оператора "menu")"</a>,
 </p>
 <p>
 или на официальной странице модуля на форуме ifiction.ru в теме <a href="https://forum.ifiction.ru/viewtopic.php?id=1527" style="text-decoration:none;" class="emFOLD">"Модуль для работы с меню (расширение функционала оператора "menu") в QSP"</a>.
@@ -339,7 +339,7 @@ Olegus t.Gl. написал для QSP модуль работы с такими
 Чтобы хоть немного облегчить подобную работу, Olegus t.Gl. написал небольшой модуль для форматирования текста. Он позволяет использовать сокращённые формы записи тегов, что изрядно облегчает как написание, так и визуальное восприятие "исходного" текста.
 </p>
 <p>
-Например, для вставки заголовка в обычный html-текст, в него нужно добавить запись: "<h1>Заголовок</h1>". Для вставки параграфа, растянутого по ширине, — "<p align=justify>Текст</p>". С помощью представляемого модуля данные записи можно сократить до "з1. Заголовок" и "п. Текст" соответственно.
+Например, для вставки заголовка в обычный html-текст, в него нужно добавить запись: "&lt;h1&gt;Заголовок&lt;/h1&gt;". Для вставки параграфа, растянутого по ширине, — "&lt;p align=justify&gt;Текст&lt;/p&gt;". С помощью представляемого модуля данные записи можно сократить до "з1. Заголовок" и "п. Текст" соответственно.
 </p>
 <p>
 Кроме этого есть сокращённые формы для выделения текста: жирный, курсив, подчёркнутый, подстрочный, надстрочный и т.п.
@@ -348,7 +348,7 @@ Olegus t.Gl. написал для QSP модуль работы с такими
 И можно отметить автоматическую расстановку длинных тире и правильных кавычек.
 </p>
 <p>
-Более подробно о модуле можно прочитать на форуме qsp.org в теме <a href="https://qsp.org/index.php?option=com_agora&task=topic&id=191&Itemid=57" style="text-decoration:none;" class="emFOLD">"QSP:Типограф" — модуль для форматирования текста</a>,
+Более подробно о модуле можно прочитать на форуме qsp.org в теме <a href="https://qsp.org/index.php?option=com_agora&amp;task=topic&amp;id=191&amp;Itemid=57" style="text-decoration:none;" class="emFOLD">"QSP:Типограф" — модуль для форматирования текста</a>,
 </p>
 <p>
 или на официальной странице модуля на форуме ifiction.ru в теме <a href="https://forum.ifiction.ru/viewtopic.php?id=1540" style="text-decoration:none;" class="emFOLD">"QSP: Типограф" — модуль для форматирования текста</a>.
@@ -372,7 +372,7 @@ Olegus t.Gl. написал для QSP модуль работы с такими
 Важно: Помните, что ограничивая игроку время, вы можете попасть в одну из ловушек плохого гейм-дизайна. Игрок попросту ничего не успеет прочитать и сделать. А ведь это текстовые игры, в которых основное место должно занимать повествование, а не нервирование игрока. :)
 </p>
 <p>
-Статья на сайте qsp.org: <a href="https://qsp.org/index.php?option=com_content&view=article&id=105:2010-06-17-13-54-25&catid=36:2009-02-19-06-11-21&Itemid=76" style="text-decoration:none;" class="emFOLD">Мини-игра "Взорви зомби" - пример использования локации-счётчика</a>
+Статья на сайте qsp.org: <a href="https://qsp.org/index.php?option=com_content&amp;view=article&amp;id=105:2010-06-17-13-54-25&amp;catid=36:2009-02-19-06-11-21&amp;Itemid=76" style="text-decoration:none;" class="emFOLD">Мини-игра "Взорви зомби" - пример использования локации-счётчика</a>
 </p>
 <p>
 Скачать игру: <a href="https://qsp.org/attachments/primer1.qsp" style="text-decoration:none;" class="emFOLD">Взорви зомби.qsp</a>
@@ -381,10 +381,10 @@ Olegus t.Gl. написал для QSP модуль работы с такими
 Подробную, но не полную, информацию по настройке окон классического плеера вы можете найти в статье <a href="https://aleksversus.github.io/howdo_faq/articles/classic.config_0005.html#classic_cfg" style="text-decoration:none;" class="emFOLD">Структура конфигурационного файла классического плеера версии 5.7.0</a>
 </p>
 <p>
-На форуме qsp.org так же существует тема <a href="https://qsp.org/index.php?option=com_agora&task=topic&id=861&Itemid=57" style="text-decoration:none;" class="emFOLD">Настройка окошек классического плеера с помощью qspgui.cfg</a>
+На форуме qsp.org так же существует тема <a href="https://qsp.org/index.php?option=com_agora&amp;task=topic&amp;id=861&amp;Itemid=57" style="text-decoration:none;" class="emFOLD">Настройка окошек классического плеера с помощью qspgui.cfg</a>
 </p>
 <h5 id="esli-ne-nashli-otveta">Если не нашли ответа</h5><p>
-Не нашли ответа на свой вопрос? Спрашивайте здесь - <a href="https://qsp.org/index.php?option=com_agora&task=topic&id=40&Itemid=57" style="text-decoration:none;" class="emFOLD">Как сделать?</a>
+Не нашли ответа на свой вопрос? Спрашивайте здесь - <a href="https://qsp.org/index.php?option=com_agora&amp;task=topic&amp;id=40&amp;Itemid=57" style="text-decoration:none;" class="emFOLD">Как сделать?</a>
 </p>
 <p>
 АВТОР: <strong>NEX</strong>  
@@ -393,7 +393,7 @@ Olegus t.Gl. написал для QSP модуль работы с такими
 19.02.2009 09:15
 </p>
 <p>
-Оригинал: <a href="https://qsp.org/index.php?option=com_agora&task=topic&id=316&Itemid=57" style="text-decoration:none;" class="emFOLD">FAQ</a></p>
+Оригинал: <a href="https://qsp.org/index.php?option=com_agora&amp;task=topic&amp;id=316&amp;Itemid=57" style="text-decoration:none;" class="emFOLD">FAQ</a></p>
 <div style="display:flex;justify-content:space-between;"><div><a href="https://aleksversus.github.io/howdo_faq/informarch/soderzhanie_0000.html" class="emHREFTT">&lt; Назад, к странице 1</a></div><div><a href="https://aleksversus.github.io/howdo_faq/informarch/informatsija_o_qsp_0002.html" class="emHREFTT">Вперёд, к странице 3 &gt;</a></div></div>
 <!-- body end -->
             <div class="em_Epigraph">
