--- a/informarch/gibkij_plejlist_0016.html
+++ b/informarch/gibkij_plejlist_0016.html
@@ -62,7 +62,7 @@ $music_theme&nbsp;<span class="Monokai-Operator">=</span>&nbsp;<span class="Mono
 06.04.2010 15:26
 </p>
 <p>
-Оригинал статьи: https://qsp.org/index.php?option=com_content&view=article&id=79:-10&catid=36:2009-02-19-06-11-21&Itemid=76
+Оригинал статьи: https://qsp.org/index.php?option=com_content&amp;view=article&amp;id=79:-10&amp;catid=36:2009-02-19-06-11-21&amp;Itemid=76
 </p>
 <p>
 Скачать модуль гибкого плейлиста можно здесь: <a href="https://qsp.org/attachments/playlist.zip" style="text-decoration:none;" class="emFOLD">playlist.zip</a>
