--- a/informarch/instruktsija_po_smene_oformlenija_iz_koda_igry_0042.html
+++ b/informarch/instruktsija_po_smene_oformlenija_iz_koda_igry_0042.html
@@ -31,7 +31,7 @@ $BACKIMAGE в Навигаторе отключен, как и другие пе
 Помимо фона, точно таким же образом можно менять и расположение окон, отступы от границ окна и прочие вещи. Это позволяет, например, красиво оформить "обложку" - заглавный экран игры.
 </p>
 <p>
-Найти данную инструкцию и много полезных сообщений можно здесь: <a href="https://qsp.org/index.php?option=com_agora&task=topic&id=633&p=9&prc=25&Itemid=57#p19887" style="text-decoration:none;" class="emFOLD">Quest Navigator для Windows</a>
+Найти данную инструкцию и много полезных сообщений можно здесь: <a href="https://qsp.org/index.php?option=com_agora&amp;task=topic&amp;id=633&amp;p=9&amp;prc=25&amp;Itemid=57#p19887" style="text-decoration:none;" class="emFOLD">Quest Navigator для Windows</a>
 </p>
 <div style="display:flex;justify-content:space-between;"><div><a href="https://aleksversus.github.io/howdo_faq/informarch/vypolnenie_js_iz_qsp-koda_0041.html" class="emHREFTT">&lt; Назад, к странице 34</a></div><div><a href="https://aleksversus.github.io/howdo_faq/informarch/modal_window_0043.html" class="emHREFTT">Вперёд, к странице 36 &gt;</a></div></div>
 <!-- body end -->
