--- a/informarch/ispol_zovanie_massivov_0017.html
+++ b/informarch/ispol_zovanie_massivov_0017.html
@@ -91,7 +91,7 @@ $имя_персонажа<span class="Monokai-Operator">[</span><span class="Mo
 26.Июл.10 12:08:22
 </p>
 <p>
-Оригинал в теме: <a href="https://qsp.org/index.php?option=com_agora&task=topic&id=93&Itemid=57" style="text-decoration:none;" class="emFOLD">Подробности использования массивов, все вопросы сюда</a>
+Оригинал в теме: <a href="https://qsp.org/index.php?option=com_agora&amp;task=topic&amp;id=93&amp;Itemid=57" style="text-decoration:none;" class="emFOLD">Подробности использования массивов, все вопросы сюда</a>
 </p>
 <div style="display:flex;justify-content:space-between;"><div><a href="https://aleksversus.github.io/howdo_faq/informarch/gibkij_plejlist_0016.html" class="emHREFTT">&lt; Назад, к странице 18</a></div><div><a href="https://aleksversus.github.io/howdo_faq/informarch/dopolnenie_inventarja_0018.html" class="emHREFTT">Вперёд, к странице 20 &gt;</a></div></div>
 <!-- body end -->
