--- a/informarch/kalendar__po_metodu_schiota_julianskih_dnej_0014.html
+++ b/informarch/kalendar__po_metodu_schiota_julianskih_dnej_0014.html
@@ -17,7 +17,7 @@
             <!-- body start -->
 <div style="display:flex;justify-content:space-between;"><div><a href="https://aleksversus.github.io/howdo_faq/informarch/txt2gam_for_linux_0013.html" class="emHREFTT">&lt; Назад, к странице 15</a></div><div><a href="https://aleksversus.github.io/howdo_faq/informarch/game_time_0015.html" class="emHREFTT">Вперёд, к странице 17 &gt;</a></div></div>
 <h5 id="informarch_calend_jul">Календарь по методу счёта Юлианский дней</h5><p>
-Календарь по рецепту <strong>evp</strong>. Синтетическая статья, основанная на <a href="https://qsp.org/index.php?option=com_agora&task=topic&id=956&Itemid=57" style="text-decoration:none;" class="emFOLD">серии сообщений</a>.
+Календарь по рецепту <strong>evp</strong>. Синтетическая статья, основанная на <a href="https://qsp.org/index.php?option=com_agora&amp;task=topic&amp;id=956&amp;Itemid=57" style="text-decoration:none;" class="emFOLD">серии сообщений</a>.
 </p>
 <p>
 Давным-давно были разработаны формулы для вычисления точной календарной даты из Юлианской даты. Юлианская дата — это число, показывающее, сколько точно прошло дней, начиная с полудня понедельника 24 ноября 4714 года до нашей эры.
