--- a/informarch/lokalizatsija_qsp_0005.html
+++ b/informarch/lokalizatsija_qsp_0005.html
@@ -44,7 +44,7 @@ msgunfmt&nbsp;qspgui.mo&nbsp;&gt;&nbsp;qspgui.po
 Автор заметки: <strong>Nex</strong>.
 </p>
 <p>
-Тема на форуме: <a href="https://qsp.org/index.php?option=com_agora&task=topic&id=164&Itemid=57" style="text-decoration:none;" class="emFOLD">"Локализация QSP"</a>
+Тема на форуме: <a href="https://qsp.org/index.php?option=com_agora&amp;task=topic&amp;id=164&amp;Itemid=57" style="text-decoration:none;" class="emFOLD">"Локализация QSP"</a>
 </p>
 <div style="display:flex;justify-content:space-between;"><div><a href="https://aleksversus.github.io/howdo_faq/informarch/uchebnik_po_qsp_dlja_redaktora_qgen_0004.html" class="emHREFTT">&lt; Назад, к странице 5</a></div><div><a href="https://aleksversus.github.io/howdo_faq/informarch/analizator_koda_qsp_0006.html" class="emHREFTT">Вперёд, к странице 7 &gt;</a></div></div>
 <!-- body end -->
