--- a/informarch/ne_rabotaet_atribut_v_aeroqsp_0044.html
+++ b/informarch/ne_rabotaet_atribut_v_aeroqsp_0044.html
@@ -82,19 +82,19 @@ $<span class="Monokai-TagName">STYLESHEET</span>='<br/>
 Все поддерживаемые свойства перечисленны в сводной справке по AeroQSP <a href="https://qsp.org/misc/aero/help.htm" style="text-decoration:none;" class="emFOLD">https://qsp.org/misc/aero/help.htm</a>
 </p>
 <h6 id="link_13_06">13.6. В AeroQSP не работает атрибут</h6><p>
-Смотреть ответ на ютубе: <a href="https://www.youtube.com/watch?v=TCve-b6AQMs&t=18s" style="text-decoration:none;" class="emFOLD">https://www.youtube.com/watch?v=TCve-b6AQMs&</a>
+Смотреть ответ на ютубе: <a href="https://www.youtube.com/watch?v=TCve-b6AQMs&amp;t=18s" style="text-decoration:none;" class="emFOLD">https://www.youtube.com/watch?v=TCve-b6AQMs&amp;</a>
 </p>
 <p>
-Storm. #2828 10.Май.15 18:33:19: <a href="https://qsp.org/index.php?option=com_agora&task=topic&id=40&p=113&prc=25&Itemid=57#p19941" style="text-decoration:none;" class="emFOLD">В классическом плеере и в Quest Navigator`е свойство "border" работает, а в Aero нет.</a>
+Storm. #2828 10.Май.15 18:33:19: <a href="https://qsp.org/index.php?option=com_agora&amp;task=topic&amp;id=40&amp;p=113&amp;prc=25&amp;Itemid=57#p19941" style="text-decoration:none;" class="emFOLD">В классическом плеере и в Quest Navigator`е свойство "border" работает, а в Aero нет.</a>
 </p>
 <p>
-Вета. #3784 24.Янв.16 14:50:18: <a href="https://qsp.org/index.php?option=com_agora&task=topic&id=40&p=152&prc=25&Itemid=57#p22645" style="text-decoration:none;" class="emFOLD">как в аере задать ячейке таблицы цвет? С bgcolor не работает что-то...</a>
+Вета. #3784 24.Янв.16 14:50:18: <a href="https://qsp.org/index.php?option=com_agora&amp;task=topic&amp;id=40&amp;p=152&amp;prc=25&amp;Itemid=57#p22645" style="text-decoration:none;" class="emFOLD">как в аере задать ячейке таблицы цвет? С bgcolor не работает что-то...</a>
 </p>
 <p>
-DeathSpace. #4212 02.Апр.16 13:52:20: <a href="https://qsp.org/index.php?option=com_agora&task=topic&id=40&p=169&prc=25&Itemid=57#p23639" style="text-decoration:none;" class="emFOLD">перевожу игру на AeroQSP но не показывает таблицы который были в классической версии плеера</a>
+DeathSpace. #4212 02.Апр.16 13:52:20: <a href="https://qsp.org/index.php?option=com_agora&amp;task=topic&amp;id=40&amp;p=169&amp;prc=25&amp;Itemid=57#p23639" style="text-decoration:none;" class="emFOLD">перевожу игру на AeroQSP но не показывает таблицы который были в классической версии плеера</a>
 </p>
 <p>
-DeathSpace. #4313 01.Май.16 02:05:59: <a href="https://qsp.org/index.php?option=com_agora&task=topic&id=40&p=173&prc=25&Itemid=57#p23838" style="text-decoration:none;" class="emFOLD">Ребят кто знает как в AeroQSP строить таблицы?</a>
+DeathSpace. #4313 01.Май.16 02:05:59: <a href="https://qsp.org/index.php?option=com_agora&amp;task=topic&amp;id=40&amp;p=173&amp;prc=25&amp;Itemid=57#p23838" style="text-decoration:none;" class="emFOLD">Ребят кто знает как в AeroQSP строить таблицы?</a>
 </p>
 <div style="display:flex;justify-content:space-between;"><div><a href="https://aleksversus.github.io/howdo_faq/informarch/aeroqsp_uchebnik_0028.html" class="emHREFTT">&lt; Назад, к странице 42</a></div><div><a href="https://aleksversus.github.io/howdo_faq/informarch/ne_rabotaet_giperssylka_v_aeroqsp_0045.html" class="emHREFTT">Вперёд, к странице 44 &gt;</a></div></div>
 <!-- body end -->
