--- a/informarch/ne_rabotaet_giperssylka_v_aeroqsp_0045.html
+++ b/informarch/ne_rabotaet_giperssylka_v_aeroqsp_0045.html
@@ -48,10 +48,10 @@
 Смещение областей гиперссылок происходит из-за того, что HTML-рендерер AeroQSP не игнорирует символы преформатирования в HTML, и обрабатывает их по-своему.
 </p>
 <h6 id="link_13_07">13.7. Не работает гиперссылка в AeroQSP</h6><p>
-Смотреть ответ на ютубе: <a href="https://www.youtube.com/watch?v=TCve-b6AQMs&t=221s" style="text-decoration:none;" class="emFOLD">https://www.youtube.com/watch?v=TCve-b6AQMs&</a>
+Смотреть ответ на ютубе: <a href="https://www.youtube.com/watch?v=TCve-b6AQMs&amp;t=221s" style="text-decoration:none;" class="emFOLD">https://www.youtube.com/watch?v=TCve-b6AQMs&amp;</a>
 </p>
 <p>
-folkextreme. #4534 20.Июл.16 14:45:03: <a href="https://qsp.org/index.php?option=com_agora&task=topic&id=40&p=182&prc=25&Itemid=57#p24397" style="text-decoration:none;" class="emFOLD">примерно в области, выделенной красным, некликабельны ссылки</a>
+folkextreme. #4534 20.Июл.16 14:45:03: <a href="https://qsp.org/index.php?option=com_agora&amp;task=topic&amp;id=40&amp;p=182&amp;prc=25&amp;Itemid=57#p24397" style="text-decoration:none;" class="emFOLD">примерно в области, выделенной красным, некликабельны ссылки</a>
 </p>
 <div style="display:flex;justify-content:space-between;"><div><a href="https://aleksversus.github.io/howdo_faq/informarch/ne_rabotaet_atribut_v_aeroqsp_0044.html" class="emHREFTT">&lt; Назад, к странице 43</a></div><div><a href="https://aleksversus.github.io/howdo_faq/informarch/obzory_qsp-compo_2010_0029.html" class="emHREFTT">Вперёд, к странице 45 &gt;</a></div></div>
 <!-- body end -->
