--- a/informarch/obnovlenie_do_5.7.0_0023.html
+++ b/informarch/obnovlenie_do_5.7.0_0023.html
@@ -50,7 +50,7 @@
 Улучшена справка по AeroQSP: https://qsp.org/misc/aero/help.htm
 </p>
 <p>
-Скачать всё можно на странице <a href="https://qsp.org/index.php?option=com_content&view=article&id=57&Itemid=56" style="text-decoration:none;" class="emFOLD">"Разработчикам"</a>. 
+Скачать всё можно на странице <a href="https://qsp.org/index.php?option=com_content&amp;view=article&amp;id=57&amp;Itemid=56" style="text-decoration:none;" class="emFOLD">"Разработчикам"</a>. 
 </p>
 <p>
 Автор: <span class="em_BLCK">BYTE</span>
@@ -59,7 +59,7 @@
 13.06.2010 22:39
 </p>
 <p>
-Оригинал статьи: https://qsp.org/index.php?option=com_content&view=article&id=103&catid=42</p>
+Оригинал статьи: https://qsp.org/index.php?option=com_content&amp;view=article&amp;id=103&amp;catid=42</p>
 <div style="display:flex;justify-content:space-between;"><div><a href="https://aleksversus.github.io/howdo_faq/informarch/modal_window_0043.html" class="emHREFTT">&lt; Назад, к странице 36</a></div><div><a href="https://aleksversus.github.io/howdo_faq/informarch/aeroqsp_0024.html" class="emHREFTT">Вперёд, к странице 38 &gt;</a></div></div>
 <!-- body end -->
             <div class="em_Epigraph">
