--- a/informarch/obzory_qsp-compo_2010_0029.html
+++ b/informarch/obzory_qsp-compo_2010_0029.html
@@ -17,16 +17,16 @@
             <!-- body start -->
 <div style="display:flex;justify-content:space-between;"><div><a href="https://aleksversus.github.io/howdo_faq/informarch/ne_rabotaet_giperssylka_v_aeroqsp_0045.html" class="emHREFTT">&lt; Назад, к странице 44</a></div><div><a href="https://aleksversus.github.io/howdo_faq/informarch/zakladki_0030.html" class="emHREFTT">Вперёд, к странице 46 &gt;</a></div></div>
 <h6 id="informarch_compo10">Обзоры игр QSP Compo 2010</h6><p>
-Обзоры взяты из темы <a href="https://qsp.org/index.php?option=com_agora&task=topic&id=49&Itemid=57" style="text-decoration:none;" class="emFOLD">Обсуждение игр QSP-Compo 2010: Дневник странника</a>.
+Обзоры взяты из темы <a href="https://qsp.org/index.php?option=com_agora&amp;task=topic&amp;id=49&amp;Itemid=57" style="text-decoration:none;" class="emFOLD">Обсуждение игр QSP-Compo 2010: Дневник странника</a>.
 </p>
 <p>
-Комментарии и обсуждения <a href="https://qsp.org/index.php?option=com_agora&task=topic&id=49&Itemid=57" style="text-decoration:none;" class="emFOLD">там же</a>.
+Комментарии и обсуждения <a href="https://qsp.org/index.php?option=com_agora&amp;task=topic&amp;id=49&amp;Itemid=57" style="text-decoration:none;" class="emFOLD">там же</a>.
 </p>
 <p>
 Часть обзоров содержит спойлеры, особенно об этом предупреждает uux.
 </p>
 <h6 id="obzory-ajenty">Обзоры Ajent`ы</h6><p>
-<a href="https://qsp.org/index.php?option=com_agora&task=topic&id=49&p=1&Itemid=57#p488" style="text-decoration:none;" class="emFOLD">ссылка</a>
+<a href="https://qsp.org/index.php?option=com_agora&amp;task=topic&amp;id=49&amp;p=1&amp;Itemid=57#p488" style="text-decoration:none;" class="emFOLD">ссылка</a>
 </p>
 <p>
 Итак, я поиграла во все игры. 
@@ -59,7 +59,7 @@
 Правда, супер!
 </p>
 <h6 id="obzory-yandexxa">Обзоры Yandexx`а</h6><p>
-<a href="https://qsp.org/index.php?option=com_agora&task=topic&id=49&p=1&Itemid=57#p490" style="text-decoration:none;" class="emFOLD">ссылка</a>
+<a href="https://qsp.org/index.php?option=com_agora&amp;task=topic&amp;id=49&amp;p=1&amp;Itemid=57#p490" style="text-decoration:none;" class="emFOLD">ссылка</a>
 </p>
 <p>
 Ради мирового баланса захотелось отписаться и мне. 
@@ -89,7 +89,7 @@
 Вот это настоящий квест. Ну, другого от человека, который играл ещё в текстовухи Скотта Адамса, ожидать и не стоит  Гулять по заброшенному поместью, копаться во всяких вещах, наблюдать флешбеки -- одно удовольствие, спасибо. Правда подвал явно для галочки сделан, и как-то в общем сумбурно заканчивается. Пиши ещё, Гор 
 </p>
 <h6 id="obzory-nonata">Обзоры Ноната</h6><p>
-<a href="https://qsp.org/index.php?option=com_agora&task=topic&id=49&p=1&Itemid=57#p494" style="text-decoration:none;" class="emFOLD">ссылка</a>
+<a href="https://qsp.org/index.php?option=com_agora&amp;task=topic&amp;id=49&amp;p=1&amp;Itemid=57#p494" style="text-decoration:none;" class="emFOLD">ссылка</a>
 </p>
 <p>
 Отыграл в три игры. А высказаться решил о <span class="em_BLCK">La Villa Esperance</span>, а то про неё комментарии какие-то так себе. В игре действительно приходится вроде бы крайне много тупо кликать, но в то же время возможность выбора у игрока есть сразу по двум принципиальным направлениям - по физическому миру (типа, куда пойти?) и по психологическому (наподобие: смириться или бороться?). Напомнило психологические тесты... Я не такой знаток игр, но, по-моему, получилась редкость. 
@@ -107,7 +107,7 @@
 Можно было бы и так навернуть, чтоб игру нельзя было закончить, пока не сделан психологический выбор по всем возможностям. Я, например, и на шефа не стал тратиться. И тоже, видимо, всё в итоге утряслось прекрасно.
 </p>
 <h6 id="obzory-sidana-rejdana">Обзоры Сидана Рейдана</h6><p>
-<a href="https://qsp.org/index.php?option=com_agora&task=topic&id=49&p=2&Itemid=57#p511" style="text-decoration:none;" class="emFOLD">ссылка</a>
+<a href="https://qsp.org/index.php?option=com_agora&amp;task=topic&amp;id=49&amp;p=2&amp;Itemid=57#p511" style="text-decoration:none;" class="emFOLD">ссылка</a>
 </p>
 <p>
 Итак... Я почти день ждал наступления благого времени "не поздно", но, видимо, повстречать мне его не удастся. По крайней мере, сейчас, в полночь по киевскому. 
@@ -194,7 +194,7 @@ P.S. А девушку можно было-бы и похоронить
 Пока только играю. Кроме "ну-ка, ну-ка..." - сказать пока нечего.
 </p>
 <h6 id="obzory-master-seta">Обзоры Master Set`а</h6><p>
-<a href="https://qsp.org/index.php?option=com_agora&task=topic&id=49&p=2&Itemid=57#p552" style="text-decoration:none;" class="emFOLD">ссылка</a>
+<a href="https://qsp.org/index.php?option=com_agora&amp;task=topic&amp;id=49&amp;p=2&amp;Itemid=57#p552" style="text-decoration:none;" class="emFOLD">ссылка</a>
 </p>
 <p>
 Ну, вставлю и я свои пять копеек. 
@@ -278,7 +278,7 @@ P.S. А девушку можно было-бы и похоронить
 Оценка: 5/5
 </p>
 <h6 id="obzory-uuxa">Обзоры <strong>uux</strong>`а</h6><p>
-<a href="https://qsp.org/index.php?option=com_agora&task=topic&id=49&p=3&Itemid=57#p760" style="text-decoration:none;" class="emFOLD">ссылка1</a>, <a href="https://qsp.org/index.php?option=com_agora&task=topic&id=49&p=3&Itemid=57#p776" style="text-decoration:none;" class="emFOLD">ссылка2</a>, <a href="https://qsp.org/index.php?option=com_agora&task=topic&id=49&p=3&Itemid=57#p780" style="text-decoration:none;" class="emFOLD">ссылка3</a>
+<a href="https://qsp.org/index.php?option=com_agora&amp;task=topic&amp;id=49&amp;p=3&amp;Itemid=57#p760" style="text-decoration:none;" class="emFOLD">ссылка1</a>, <a href="https://qsp.org/index.php?option=com_agora&amp;task=topic&amp;id=49&amp;p=3&amp;Itemid=57#p776" style="text-decoration:none;" class="emFOLD">ссылка2</a>, <a href="https://qsp.org/index.php?option=com_agora&amp;task=topic&amp;id=49&amp;p=3&amp;Itemid=57#p780" style="text-decoration:none;" class="emFOLD">ссылка3</a>
 </p>
 <p>
 Начинаю потихоньку выкладывать свои обзоры. Пока - три игры (обозрены в том порядке, в каком я в них играл). Оценки - по десятибалльной шкале.
@@ -395,7 +395,7 @@ P.S. А девушку можно было-бы и похоронить
 Очень хочется поиграть в законченную версию. Увы, учитывая все обстоятельства, прогнозы вырисовываются малоутешительные: подозреваю, что игра будет дописана в далеком будущем и, скорее всего, на "Твибоксе". Но я все равно буду ждать...
 </p>
 <h6 id="obzory-nexa">Обзоры <strong>Nex</strong>`а</h6><p>
-<a href="https://qsp.org/index.php?option=com_agora&task=topic&id=49&p=3&Itemid=57#p784" style="text-decoration:none;" class="emFOLD">ссылка</a>
+<a href="https://qsp.org/index.php?option=com_agora&amp;task=topic&amp;id=49&amp;p=3&amp;Itemid=57#p784" style="text-decoration:none;" class="emFOLD">ссылка</a>
 </p>
 <p>
 Поиграл во все игры конкурса. 
