--- a/informarch/plavnoe_izmenenie_0020.html
+++ b/informarch/plavnoe_izmenenie_0020.html
@@ -92,7 +92,7 @@ b2&nbsp;<span class="Monokai-Operator">=</span>&nbsp;<span class="Monokai-SysVar
 20.05.2011 09:23
 </p>
 <p>
-Оригинал статьи: <a href="https://qsp.org/index.php?option=com_content&view=article&id=112:2011-05-20-06-23-02&catid=36:2009-02-19-06-11-21&Itemid=76" style="text-decoration:none;" class="emFOLD">Плавное изменение цвета фона 1.0</a>
+Оригинал статьи: <a href="https://qsp.org/index.php?option=com_content&amp;view=article&amp;id=112:2011-05-20-06-23-02&amp;catid=36:2009-02-19-06-11-21&amp;Itemid=76" style="text-decoration:none;" class="emFOLD">Плавное изменение цвета фона 1.0</a>
 </p>
 <div style="display:flex;justify-content:space-between;"><div><a href="https://aleksversus.github.io/howdo_faq/informarch/dejstvie_po_usloviju_0019.html" class="emHREFTT">&lt; Назад, к странице 21</a></div><div><a href="https://aleksversus.github.io/howdo_faq/informarch/otladchik_0021.html" class="emHREFTT">Вперёд, к странице 23 &gt;</a></div></div>
 <!-- body end -->
