--- a/informarch/preprotsessor_0012.html
+++ b/informarch/preprotsessor_0012.html
@@ -35,16 +35,16 @@
 <span class="em_BLCK">#mode quote</span> — отключает обработку символа "\" как служебного, рекомендуется поставить первой строчкой файла
 </p>
 <p>
-<span class="em_BLCK">#define</span> <имя> — определить флажок, на который можно будет позже ссылаться
+<span class="em_BLCK">#define</span> &lt;имя&gt; — определить флажок, на который можно будет позже ссылаться
 </p>
 <p>
-<span class="em_BLCK">#define</span> <имя> <значение> — определить значение, на которое можно будет позже ссылаться
+<span class="em_BLCK">#define</span> &lt;имя&gt; &lt;значение&gt; — определить значение, на которое можно будет позже ссылаться
 </p>
 <p>
-<span class="em_BLCK">#undef</span> <имя> — удаление значения или флажка
+<span class="em_BLCK">#undef</span> &lt;имя&gt; — удаление значения или флажка
 </p>
 <p>
-<span class="em_BLCK">#ifdef</span> <имя> — если флаг или значение определены, то весь текст после этого условия до <span class="em_BLCK">#endif</span> или до <span class="em_BLCK">#else</span> будет выведен в итоговый файл
+<span class="em_BLCK">#ifdef</span> &lt;имя&gt; — если флаг или значение определены, то весь текст после этого условия до <span class="em_BLCK">#endif</span> или до <span class="em_BLCK">#else</span> будет выведен в итоговый файл
 </p>
 <p>
 <span class="em_BLCK">#else</span> — окончание фрагмента, регулируемого инструкцией <span class="em_BLCK">#ifdef</span> - последующий текст выводится, если условие в <span class="em_BLCK">#ifdef</span> не выполнено
@@ -56,7 +56,7 @@
 <span class="em_BLCK">#ifndef</span> — аналогично <span class="em_BLCK">#ifdef,</span> однако проверяется, что флаг или значение не определены - весь текст после этого условия до <span class="em_BLCK">#endif</span> или до <span class="em_BLCK">#else</span> будет выведен в итоговый файл
 </p>
 <p>
-<span class="em_BLCK">#include</span> "<имя файла>" — в выходной файл вставляет текст из указанного файла (из той же папки) - если файл содержит инструкции, то он также будет обработан
+<span class="em_BLCK">#include</span> "&lt;имя файла&gt;" — в выходной файл вставляет текст из указанного файла (из той же папки) - если файл содержит инструкции, то он также будет обработан
 </p>
 <p>
 Поскольку в <span class="em_BLCK">txt2gam</span>, по умолчанию, для обозначения начала локации используется символ "#", то важно, чтобы имена локаций не назывались по имени инструкции (<span class="em_BLCK">define</span>, <span class="em_BLCK">ifdef</span>, и т.п.). Также не стоит включать инструкции в комментарии и строки, лучше их записывать на отдельных строчках.
@@ -68,7 +68,7 @@
 Для запуска текста игры на обработку нужно открыть консоль и набрать команду:
 </p>
 <p>
-gpp.exe <входной файл> -o <выходной файл>
+gpp.exe &lt;входной файл&gt; -o &lt;выходной файл&gt;
 </p>
 <p>
 Другие ключи запуска можно узнать, запустив как: gpp.exe --help
