--- a/informarch/rabota_v_tekstovom_redaktore_0011.html
+++ b/informarch/rabota_v_tekstovom_redaktore_0011.html
@@ -17,7 +17,7 @@
             <!-- body start -->
 <div style="display:flex;justify-content:space-between;"><div><a href="https://aleksversus.github.io/howdo_faq/informarch/txt2gam_help_0010.html" class="emHREFTT">&lt; Назад, к странице 12</a></div><div><a href="https://aleksversus.github.io/howdo_faq/informarch/preprotsessor_0012.html" class="emHREFTT">Вперёд, к странице 14 &gt;</a></div></div>
 <h5 id=" informarch_game_in_texteditor">Пишем QSP-игру в текстовом редакторе</h5><p>
-Для того, чтобы написать свой текстовый квест, понадобится любой текстовый редактор и программа <a href="https://aleksversus.github.io/howdo_faq/informarch/txt2gam_help_0010.html#informarch_txt2gam_manual" style="text-decoration:none;" class="emFOLD">TXT2GAM</a>. Для более удобного использования этой программы существует специальная оболочка <a href="https://qsp.org/index.php?option=com_content&task=view&id=53&Itemid=56" style="text-decoration:none;" class="emFOLD">GAMConv</a>, которой можно пользоваться для конвертирования кода уроков. Для проигрывания квеста понадобится <a href="https://qsp.org/index.php?option=com_content&view=article&id=64&Itemid=56" style="text-decoration:none;" class="emFOLD">QSP-плеер</a>.
+Для того, чтобы написать свой текстовый квест, понадобится любой текстовый редактор и программа <a href="https://aleksversus.github.io/howdo_faq/informarch/txt2gam_help_0010.html#informarch_txt2gam_manual" style="text-decoration:none;" class="emFOLD">TXT2GAM</a>. Для более удобного использования этой программы существует специальная оболочка <a href="https://qsp.org/index.php?option=com_content&amp;task=view&amp;id=53&amp;Itemid=56" style="text-decoration:none;" class="emFOLD">GAMConv</a>, которой можно пользоваться для конвертирования кода уроков. Для проигрывания квеста понадобится <a href="https://qsp.org/index.php?option=com_content&amp;view=article&amp;id=64&amp;Itemid=56" style="text-decoration:none;" class="emFOLD">QSP-плеер</a>.
 </p>
 <p>
 В примерах будут использоваться комментарии - строки, которые игрок не увидит и которые служат для того, чтобы можно было делать в коде игры различные заметки. Комментарий начинается с восклицательного знака «!».
@@ -175,7 +175,7 @@
 -</span><br/>
 </div>
 <p>
-Для того, чтобы в тексте локации вывести значение переменной используется конструкция <span class="em_BLCK">'<<Имя_переменной>></span>'. Обратите внимание в каждой локации выводится количество монет у игрока. К тому же, в локации «Порт» показывается количество ящиков, которое нужно перенести, чтобы получить деньги.
+Для того, чтобы в тексте локации вывести значение переменной используется конструкция <span class="em_BLCK">'&lt;&lt;Имя_переменной&gt;&gt;</span>'. Обратите внимание в каждой локации выводится количество монет у игрока. К тому же, в локации «Порт» показывается количество ящиков, которое нужно перенести, чтобы получить деньги.
 </p>
 <p>
 Ветвления в QSP задаются командой <span class="em_BLCK">IF</span>, после которой идёт условие и ставится двоеточие. Затем идут инструкции, которые выполняются, если условие верное и ставится завершающая команда <span class="em_BLCK">END</span>.
