--- a/informarch/rasprostranjaemaja_standalon_sborka_na_klassike_0031.html
+++ b/informarch/rasprostranjaemaja_standalon_sborka_na_klassike_0031.html
@@ -101,7 +101,7 @@ start.bat
 Смотреть ответ на ютубе: <a href="https://youtu.be/Ca4ynD_1BqQ" style="text-decoration:none;" class="emFOLD">https://youtu.be/Ca4ynD_1BqQ</a>
 </p>
 <p>
-Genryzz. #3912 21.Фев.16 21:30:40: <a href="https://qsp.org/index.php?option=com_agora&task=topic&id=40&p=157&prc=25&Itemid=57#p23065" style="text-decoration:none;" class="emFOLD">как сделать пусковой файл?</a>
+Genryzz. #3912 21.Фев.16 21:30:40: <a href="https://qsp.org/index.php?option=com_agora&amp;task=topic&amp;id=40&amp;p=157&amp;prc=25&amp;Itemid=57#p23065" style="text-decoration:none;" class="emFOLD">как сделать пусковой файл?</a>
 </p>
 <div style="display:flex;justify-content:space-between;"><div><a href="https://aleksversus.github.io/howdo_faq/informarch/polka_igr_0007.html" class="emHREFTT">&lt; Назад, к странице 8</a></div><div><a href="https://aleksversus.github.io/howdo_faq/informarch/konsol_nyj_qsp-pleer_0008.html" class="emHREFTT">Вперёд, к странице 10 &gt;</a></div></div>
 <!-- body end -->
