--- a/informarch/shablony_oformlenija_dlja_igr_0032.html
+++ b/informarch/shablony_oformlenija_dlja_igr_0032.html
@@ -53,94 +53,94 @@
 Возможности Quest Navigator в плане HTML почти полностью повторяют возможности обычного браузера: http://htmlbook.ru
 </p>
 <p>
-Oliver. #5326 07.Июн.18 00:14:02: <a href="https://qsp.org/index.php?option=com_agora&task=topic&id=40&p=214&prc=25&Itemid=57#p26714" style="text-decoration:none;" class="emFOLD">Короче, есть фон, на котором изображены люди. Необходимо, чтобы при наведении на определённого человека, его изображение изменялось(хотя бы как-то выделялось). Весьма буду благодарен за помощь.</a>
+Oliver. #5326 07.Июн.18 00:14:02: <a href="https://qsp.org/index.php?option=com_agora&amp;task=topic&amp;id=40&amp;p=214&amp;prc=25&amp;Itemid=57#p26714" style="text-decoration:none;" class="emFOLD">Короче, есть фон, на котором изображены люди. Необходимо, чтобы при наведении на определённого человека, его изображение изменялось(хотя бы как-то выделялось). Весьма буду благодарен за помощь.</a>
 </p>
 <p>
 Подсветка части изображения: <a href="http://seodnevnik.ru/sozdanie-sajtov/podsvetka-kartinki-ili-sozdanie-knopki-na-css.html" style="text-decoration:none;" class="emFOLD">статья на seodnevnik</a>
 </p>
 <p>
-cleep. #5125 29.Июл.17 12:24:52: <a href="https://qsp.org/index.php?option=com_agora&task=topic&id=40&p=206&prc=25&Itemid=57#p26061" style="text-decoration:none;" class="emFOLD">Возник такой вопрос: можно ли как-то на Quest Navigator-е, например, при нажатии на клавишу ESC вызвать меню паузы?</a>
+cleep. #5125 29.Июл.17 12:24:52: <a href="https://qsp.org/index.php?option=com_agora&amp;task=topic&amp;id=40&amp;p=206&amp;prc=25&amp;Itemid=57#p26061" style="text-decoration:none;" class="emFOLD">Возник такой вопрос: можно ли как-то на Quest Navigator-е, например, при нажатии на клавишу ESC вызвать меню паузы?</a>
 </p>
 <p>
-cleep. #5132 22.Авг.17 17:57:20: <a href="https://qsp.org/index.php?option=com_agora&task=topic&id=40&p=206&prc=25&Itemid=57#p26100" style="text-decoration:none;" class="emFOLD">Можете объяснит на примере, как в QN привязать к клавише какое-либо действие?</a>
+cleep. #5132 22.Авг.17 17:57:20: <a href="https://qsp.org/index.php?option=com_agora&amp;task=topic&amp;id=40&amp;p=206&amp;prc=25&amp;Itemid=57#p26100" style="text-decoration:none;" class="emFOLD">Можете объяснит на примере, как в QN привязать к клавише какое-либо действие?</a>
 </p>
 <p>
-TEMP_USER. #5228 26.Фев.18 14:20:47: <a href="https://qsp.org/index.php?option=com_agora&task=topic&id=40&p=210&prc=25&Itemid=57#p26454" style="text-decoration:none;" class="emFOLD">quest navigator и qgen это разные вещи?</a>
+TEMP_USER. #5228 26.Фев.18 14:20:47: <a href="https://qsp.org/index.php?option=com_agora&amp;task=topic&amp;id=40&amp;p=210&amp;prc=25&amp;Itemid=57#p26454" style="text-decoration:none;" class="emFOLD">quest navigator и qgen это разные вещи?</a>
 </p>
 <p>
-Hessar. #5291 09.Апр.18 15:19:27: <a href="https://qsp.org/index.php?option=com_agora&task=topic&id=40&p=212&prc=25&Itemid=57#p26613" style="text-decoration:none;" class="emFOLD">можно ли подключить к игре библиотеку jQuery и как правильно использовать JavaScript для отображения в плеере? Что писать и куда? </a>
+Hessar. #5291 09.Апр.18 15:19:27: <a href="https://qsp.org/index.php?option=com_agora&amp;task=topic&amp;id=40&amp;p=212&amp;prc=25&amp;Itemid=57#p26613" style="text-decoration:none;" class="emFOLD">можно ли подключить к игре библиотеку jQuery и как правильно использовать JavaScript для отображения в плеере? Что писать и куда? </a>
 </p>
 <p>
-новичок. #5466 31.Янв.19 11:43:10: <a href="https://qsp.org/index.php?option=com_agora&task=topic&id=40&p=219&prc=25&Itemid=57#p27067" style="text-decoration:none;" class="emFOLD">еще такой вопрос. почему в навигаторе при pl описание выводится в основном окне</a>
+новичок. #5466 31.Янв.19 11:43:10: <a href="https://qsp.org/index.php?option=com_agora&amp;task=topic&amp;id=40&amp;p=219&amp;prc=25&amp;Itemid=57#p27067" style="text-decoration:none;" class="emFOLD">еще такой вопрос. почему в навигаторе при pl описание выводится в основном окне</a>
 </p>
 <p>
-Подробный разбор изменений дизайна в Quest Navigator: <a href="https://qsp.org/index.php?option=com_agora&task=topic&id=1067&Itemid=57" style="text-decoration:none;" class="emFOLD">тема на форуме qsp.su</a>
+Подробный разбор изменений дизайна в Quest Navigator: <a href="https://qsp.org/index.php?option=com_agora&amp;task=topic&amp;id=1067&amp;Itemid=57" style="text-decoration:none;" class="emFOLD">тема на форуме qsp.su</a>
 </p>
 <h5 id="link_22_01">22.1.  Пишу несколько игр в Quest Navigator. Как сделать, чтобы у каждой игры было собственное оформление?</h5><p>
-Смотреть ответ на ютубе: <a href="https://www.youtube.com/watch?v=1mMcOyG6_jc&t=18s" style="text-decoration:none;" class="emFOLD">https://www.youtube.com/watch?v=1mMcOyG6_jc&</a>
+Смотреть ответ на ютубе: <a href="https://www.youtube.com/watch?v=1mMcOyG6_jc&amp;t=18s" style="text-decoration:none;" class="emFOLD">https://www.youtube.com/watch?v=1mMcOyG6_jc&amp;</a>
 </p>
 <h5 id="link_22_02">22.2.  Как подключить свой шрифт к игре?</h5><p>
-Смотреть ответ на ютубе: <a href="https://www.youtube.com/watch?v=1mMcOyG6_jc&t=414s" style="text-decoration:none;" class="emFOLD">https://www.youtube.com/watch?v=1mMcOyG6_jc&</a>
+Смотреть ответ на ютубе: <a href="https://www.youtube.com/watch?v=1mMcOyG6_jc&amp;t=414s" style="text-decoration:none;" class="emFOLD">https://www.youtube.com/watch?v=1mMcOyG6_jc&amp;</a>
 </p>
 <p>
 Подключение своего шрифта к игре: http://htmlbook.ru/css/font-face
 </p>
 <p>
-gribochek. #3756 12.Янв.16 13:26:27: <a href="https://qsp.org/index.php?option=com_agora&task=topic&id=40&p=151&prc=25&Itemid=57#p22462" style="text-decoration:none;" class="emFOLD">Если я выберу шрифт, то люди при скачивании его будут видеть опционально, или же мне придется закладывать шрифт в папку с игрой, и просьбой установить его?</a>
+gribochek. #3756 12.Янв.16 13:26:27: <a href="https://qsp.org/index.php?option=com_agora&amp;task=topic&amp;id=40&amp;p=151&amp;prc=25&amp;Itemid=57#p22462" style="text-decoration:none;" class="emFOLD">Если я выберу шрифт, то люди при скачивании его будут видеть опционально, или же мне придется закладывать шрифт в папку с игрой, и просьбой установить его?</a>
 </p>
 <p>
-Aaaspavel. #4203 31.Мар.16 09:53:21: <a href="https://qsp.org/index.php?option=com_agora&task=topic&id=40&p=169&prc=25&Itemid=57#p23627" style="text-decoration:none;" class="emFOLD">задумка такая: к репутации гг привязать шрифт в навигаторе,  как это можно сделать?</a>
+Aaaspavel. #4203 31.Мар.16 09:53:21: <a href="https://qsp.org/index.php?option=com_agora&amp;task=topic&amp;id=40&amp;p=169&amp;prc=25&amp;Itemid=57#p23627" style="text-decoration:none;" class="emFOLD">задумка такая: к репутации гг привязать шрифт в навигаторе,  как это можно сделать?</a>
 </p>
 <h5 id="link_22_03">22.3.  Пишу bcolor=rgb(255,200,200), но это не меняет цвет фона игры. Как изменить цвет фона из кода QSP?</h5><p>
-Смотреть ответ на ютубе: <a href="https://www.youtube.com/watch?v=xhRfyqNepr0&t=18s" style="text-decoration:none;" class="emFOLD">https://www.youtube.com/watch?v=xhRfyqNepr0&</a>
+Смотреть ответ на ютубе: <a href="https://www.youtube.com/watch?v=xhRfyqNepr0&amp;t=18s" style="text-decoration:none;" class="emFOLD">https://www.youtube.com/watch?v=xhRfyqNepr0&amp;</a>
 </p>
 <h5 id="link_22_04">22.4.  Хочу прописать игре собственный вид курсора, как это сделать?</h5><p>
-Смотреть ответ на ютубе: <a href="https://www.youtube.com/watch?v=xhRfyqNepr0&t=182s" style="text-decoration:none;" class="emFOLD">https://www.youtube.com/watch?v=xhRfyqNepr0&</a>
+Смотреть ответ на ютубе: <a href="https://www.youtube.com/watch?v=xhRfyqNepr0&amp;t=182s" style="text-decoration:none;" class="emFOLD">https://www.youtube.com/watch?v=xhRfyqNepr0&amp;</a>
 </p>
 <p>
 Подключение своего курсора к игре: http://htmlbook.ru/css/cursor
 </p>
 <p>
-Aaaspavel. #4256 08.Апр.16 21:56:56: <a href="https://qsp.org/index.php?option=com_agora&task=topic&id=40&p=171&prc=25&Itemid=57#p23707" style="text-decoration:none;" class="emFOLD">при выполнении наведении курсора на определённые области курсор менялся на другие значки, к примеру с с разрешением (.ani)?</a>
+Aaaspavel. #4256 08.Апр.16 21:56:56: <a href="https://qsp.org/index.php?option=com_agora&amp;task=topic&amp;id=40&amp;p=171&amp;prc=25&amp;Itemid=57#p23707" style="text-decoration:none;" class="emFOLD">при выполнении наведении курсора на определённые области курсор менялся на другие значки, к примеру с с разрешением (.ani)?</a>
 </p>
 <h5 id="link_22_05">22.5.  Скопировал шаблон оформления в папку со своей игрой, но что с ним теперь делать?</h5><p>
-Смотреть ответ на ютубе: <a href="https://www.youtube.com/watch?v=eB_BrqnD7Vw&t=18s" style="text-decoration:none;" class="emFOLD">https://www.youtube.com/watch?v=eB_BrqnD7Vw&</a>
+Смотреть ответ на ютубе: <a href="https://www.youtube.com/watch?v=eB_BrqnD7Vw&amp;t=18s" style="text-decoration:none;" class="emFOLD">https://www.youtube.com/watch?v=eB_BrqnD7Vw&amp;</a>
 </p>
 <p>
-Iam. #4469 25.Июн.16 22:47:24: <a href="https://qsp.org/index.php?option=com_agora&task=topic&id=40&p=179&prc=25&Itemid=57#p24237" style="text-decoration:none;" class="emFOLD">Может кто-то на конкретном примере показать как перелопатить интерфейс?</a>
+Iam. #4469 25.Июн.16 22:47:24: <a href="https://qsp.org/index.php?option=com_agora&amp;task=topic&amp;id=40&amp;p=179&amp;prc=25&amp;Itemid=57#p24237" style="text-decoration:none;" class="emFOLD">Может кто-то на конкретном примере показать как перелопатить интерфейс?</a>
 </p>
 <p>
-Macmep. #4737 31.Окт.16 13:34:16: <a href="https://qsp.org/index.php?option=com_agora&task=topic&id=40&p=190&prc=25&Itemid=57#p24810" style="text-decoration:none;" class="emFOLD">Собственно вопрос: как создать блок вывода действий? Что именно прописать в CSS?</a>
+Macmep. #4737 31.Окт.16 13:34:16: <a href="https://qsp.org/index.php?option=com_agora&amp;task=topic&amp;id=40&amp;p=190&amp;prc=25&amp;Itemid=57#p24810" style="text-decoration:none;" class="emFOLD">Собственно вопрос: как создать блок вывода действий? Что именно прописать в CSS?</a>
 </p>
 <h5 id="link_22_06">22.6.  Как узнать, на каком плеере запущена игра: на классическом QSP, или на Quest Navigator?</h5><p>
-Смотреть ответ на ютубе: <a href="https://www.youtube.com/watch?v=xhRfyqNepr0&t=495s" style="text-decoration:none;" class="emFOLD">https://www.youtube.com/watch?v=xhRfyqNepr0&</a>
+Смотреть ответ на ютубе: <a href="https://www.youtube.com/watch?v=xhRfyqNepr0&amp;t=495s" style="text-decoration:none;" class="emFOLD">https://www.youtube.com/watch?v=xhRfyqNepr0&amp;</a>
 </p>
 <h5 id="link_2_07">22.7.  Как вставить видео в игру на Навигаторе?</h5><p>
-Смотреть ответ на ютубе: <a href="https://www.youtube.com/watch?v=g367zg1P7PM&t=18s" style="text-decoration:none;" class="emFOLD">https://www.youtube.com/watch?v=g367zg1P7PM&</a>
+Смотреть ответ на ютубе: <a href="https://www.youtube.com/watch?v=g367zg1P7PM&amp;t=18s" style="text-decoration:none;" class="emFOLD">https://www.youtube.com/watch?v=g367zg1P7PM&amp;</a>
 </p>
 <p>
-Deagle. #4829 05.Янв.17 19:26:21: <a href="https://qsp.org/index.php?option=com_agora&task=topic&id=40&p=194&prc=25&Itemid=57#p25042" style="text-decoration:none;" class="emFOLD">Подскажите, пожалуйста, как вставить видео в quest navigator?</a>
+Deagle. #4829 05.Янв.17 19:26:21: <a href="https://qsp.org/index.php?option=com_agora&amp;task=topic&amp;id=40&amp;p=194&amp;prc=25&amp;Itemid=57#p25042" style="text-decoration:none;" class="emFOLD">Подскажите, пожалуйста, как вставить видео в quest navigator?</a>
 </p>
 <h5 id="link_22_08">22.8.  Как делать standalone-сборку на Навигаторе?</h5><p>
-Смотреть ответ на ютубе: <a href="https://www.youtube.com/watch?v=g367zg1P7PM&t=323s" style="text-decoration:none;" class="emFOLD">https://www.youtube.com/watch?v=g367zg1P7PM&</a>
+Смотреть ответ на ютубе: <a href="https://www.youtube.com/watch?v=g367zg1P7PM&amp;t=323s" style="text-decoration:none;" class="emFOLD">https://www.youtube.com/watch?v=g367zg1P7PM&amp;</a>
 </p>
 <h5 id="link_22_09">22.9.  Где в Quest Navigator править размер окна с игрой?</h5><p>
-Смотреть ответ на ютубе: <a href="https://www.youtube.com/watch?v=g367zg1P7PM&t=502s" style="text-decoration:none;" class="emFOLD">https://www.youtube.com/watch?v=g367zg1P7PM&</a>
+Смотреть ответ на ютубе: <a href="https://www.youtube.com/watch?v=g367zg1P7PM&amp;t=502s" style="text-decoration:none;" class="emFOLD">https://www.youtube.com/watch?v=g367zg1P7PM&amp;</a>
 </p>
 <p>
-kosmosnash. #4475 27.Июн.16 01:12:06: <a href="https://qsp.org/index.php?option=com_agora&task=topic&id=40&p=180&prc=25&Itemid=57#p24255" style="text-decoration:none;" class="emFOLD">вопрос по Quest Navigator. Как можно сделать так, чтобы при разворачивании окна и (или) при изменении его размера сама игра тоже разворачивалась?</a>
+kosmosnash. #4475 27.Июн.16 01:12:06: <a href="https://qsp.org/index.php?option=com_agora&amp;task=topic&amp;id=40&amp;p=180&amp;prc=25&amp;Itemid=57#p24255" style="text-decoration:none;" class="emFOLD">вопрос по Quest Navigator. Как можно сделать так, чтобы при разворачивании окна и (или) при изменении его размера сама игра тоже разворачивалась?</a>
 </p>
 <p>
-Deagle. #4838 08.Янв.17 18:31:12: <a href="https://qsp.org/index.php?option=com_agora&task=topic&id=40&p=194&prc=25&Itemid=57#p25056" style="text-decoration:none;" class="emFOLD">А где в quest navigator править размер окна с игрой.</a>
+Deagle. #4838 08.Янв.17 18:31:12: <a href="https://qsp.org/index.php?option=com_agora&amp;task=topic&amp;id=40&amp;p=194&amp;prc=25&amp;Itemid=57#p25056" style="text-decoration:none;" class="emFOLD">А где в quest navigator править размер окна с игрой.</a>
 </p>
 <h5 id="link_22_10">22.10.  Как выполнить JavaScript прямо из кода QSP?</h5><p>
-Смотреть ответ на ютубе: <a href="https://www.youtube.com/watch?v=g367zg1P7PM&t=763s" style="text-decoration:none;" class="emFOLD">https://www.youtube.com/watch?v=g367zg1P7PM&</a>
+Смотреть ответ на ютубе: <a href="https://www.youtube.com/watch?v=g367zg1P7PM&amp;t=763s" style="text-decoration:none;" class="emFOLD">https://www.youtube.com/watch?v=g367zg1P7PM&amp;</a>
 </p>
 <p>
-cleep. #5106 04.Июл.17 10:26:14: <a href="https://qsp.org/index.php?option=com_agora&task=topic&id=40&p=205&prc=25&Itemid=57#p25969" style="text-decoration:none;" class="emFOLD">Получается, что Quest Navigator поддерживает возможность включения Javascript-ов прямо в игре?</a>
+cleep. #5106 04.Июл.17 10:26:14: <a href="https://qsp.org/index.php?option=com_agora&amp;task=topic&amp;id=40&amp;p=205&amp;prc=25&amp;Itemid=57#p25969" style="text-decoration:none;" class="emFOLD">Получается, что Quest Navigator поддерживает возможность включения Javascript-ов прямо в игре?</a>
 </p>
 <p>
-NickoAilus. #5364 10.Авг.18 16:31:18: <a href="https://qsp.org/index.php?option=com_agora&task=topic&id=40&p=215&prc=25&Itemid=57#p26826" style="text-decoration:none;" class="emFOLD">Есть ли тут знатоки Навигатора? Можно ли выполнять в нём запросы к JS? Можно ли заставить js-функцию возвращать нужное значение так, чтобы QSP его принял?</a>
+NickoAilus. #5364 10.Авг.18 16:31:18: <a href="https://qsp.org/index.php?option=com_agora&amp;task=topic&amp;id=40&amp;p=215&amp;prc=25&amp;Itemid=57#p26826" style="text-decoration:none;" class="emFOLD">Есть ли тут знатоки Навигатора? Можно ли выполнять в нём запросы к JS? Можно ли заставить js-функцию возвращать нужное значение так, чтобы QSP его принял?</a>
 </p>
 <div style="display:flex;justify-content:space-between;"><div><a href="https://aleksversus.github.io/howdo_faq/informarch/tjanem_karty_iz_kollody_0022.html" class="emHREFTT">&lt; Назад, к странице 24</a></div><div><a href="https://aleksversus.github.io/howdo_faq/informarch/kak_podkljuchit__svoj_shrift_0033.html" class="emHREFTT">Вперёд, к странице 26 &gt;</a></div></div>
 <!-- body end -->
