--- a/informarch/uchebnik_po_qsp_dlja_redaktora_qgen_0004.html
+++ b/informarch/uchebnik_po_qsp_dlja_redaktora_qgen_0004.html
@@ -32,9 +32,9 @@
 Для того, чтобы приступить к выполнению заданий, убедитесь, что вы
 </p>
 <ul>
-<li>Установили <a href="https://qsp.org/index.php?option=com_content&view=article&id=64&Itemid=56" style="text-decoration:none;" class="emFOLD">плеер QSP</a></li>
-<li>Скачали и распаковали <a href="https://qsp.org/index.php?option=com_content&task=view&id=46&Itemid=56" style="text-decoration:none;" class="emFOLD">редактор QGen</a></li>
-<li>Скачали справку по QSP со страницы <a href="https://qsp.org/index.php?option=com_content&view=article&id=57&Itemid=56" style="text-decoration:none;" class="emFOLD">"Разработчикам"</a></li>
+<li>Установили <a href="https://qsp.org/index.php?option=com_content&amp;view=article&amp;id=64&amp;Itemid=56" style="text-decoration:none;" class="emFOLD">плеер QSP</a></li>
+<li>Скачали и распаковали <a href="https://qsp.org/index.php?option=com_content&amp;task=view&amp;id=46&amp;Itemid=56" style="text-decoration:none;" class="emFOLD">редактор QGen</a></li>
+<li>Скачали справку по QSP со страницы <a href="https://qsp.org/index.php?option=com_content&amp;view=article&amp;id=57&amp;Itemid=56" style="text-decoration:none;" class="emFOLD">"Разработчикам"</a></li>
 </ul>
 <p>
 Всё есть? Смело приступаем к первому уроку!
@@ -281,7 +281,7 @@ $вопрос&nbsp;<span class="Monokai-Operator">=</span>&nbsp;$строка&nb
 Использование переменных в условиях мы разберем в следующем уроке.
 </p>
 <h5 id="vyvod">Вывод</h5><p>
-Для вывода используйте двойные угловые скобки, "<<" и ">>". Между двойными угловыми скобками напишите имя переменной, например "<<$вопрос>>", или "<>", и при выводе плеер сам подставит текущее значение переменной, при этом угловые скобки выведены на экран не будут.
+Для вывода используйте двойные угловые скобки, "&lt;&lt;" и "&gt;&gt;". Между двойными угловыми скобками напишите имя переменной, например "&lt;&lt;$вопрос&gt;&gt;", или "&lt;&gt;", и при выводе плеер сам подставит текущее значение переменной, при этом угловые скобки выведены на экран не будут.
 </p>
 <h5 id="primeniaem-znaniia">Применяем знания</h5><p>
 Начнем применять переменные на практике. Создайте новую игру, назовите ее "Planet Master".
@@ -324,7 +324,7 @@ $Имя&nbsp;<span class="Monokai-Operator">=</span>&nbsp;<span class="Monokai-F
 Вторая строка задает значение для числовой переменной Температура. В этой переменной будет храниться текущая температура для планеты.
 </p>
 <p>
-В третьей строке на экран описания локации выводится текст. В выводимом тексте, вместо выражения <<$Имя>> плеер подставит значение переменной $Имя, то есть тот текст, который ввел игрок. Если игрок ввел "Персефона", то на экране будет написано "Ваша планета называется Персефона."
+В третьей строке на экран описания локации выводится текст. В выводимом тексте, вместо выражения &lt;&lt;$Имя&gt;&gt; плеер подставит значение переменной $Имя, то есть тот текст, который ввел игрок. Если игрок ввел "Персефона", то на экране будет написано "Ваша планета называется Персефона."
 </p>
 <p>
 Создайте действие "Управлять планетой" с переходом на локацию "Планета".
@@ -340,7 +340,7 @@ $Имя&nbsp;<span class="Monokai-Operator">=</span>&nbsp;<span class="Monokai-F
 <br/>Температура&nbsp;на&nbsp;планете:&nbsp;&lt;&lt;Температура&gt;&gt;&nbsp;градусов.
 </div>
 <p>
-При выводе на экран, вместо <span class="em_BLCK"><<$Имя>></span> и <span class="em_BLCK"><<Температура>></span> будут подставлены значения указанных переменных.
+При выводе на экран, вместо <span class="em_BLCK">&lt;&lt;$Имя&gt;&gt;</span> и <span class="em_BLCK">&lt;&lt;Температура&gt;&gt;</span> будут подставлены значения указанных переменных.
 </p>
 <p>
 Нам нужно, чтобы игрок мог изменить температуру на планете. Для этого сделаем несколько действий, в которых будет меняться переменная Температура.
