--- a/informarch/zakladki_0030.html
+++ b/informarch/zakladki_0030.html
@@ -66,7 +66,7 @@ QSP-Анализатор — программа для анализа кода
 <p>
 Пакет для работы с текстовым и бинарным форматом qsp от Werewolf. Если кому-то захочется поиграться - там специально сделано что IO операции не часть пакета (чтобы его можно было в браузере(qspider) и в nodejs использовать), поэтому четние/запись файла нужно делать средствами nodejs.
 </p>
-<h6 id="qsp---txt">qsp -> txt</h6><p>
+<h6 id="qsp--gt-txt">qsp -&gt; txt</h6><p>
 Утилита <strong>Werewolf</strong>`а для конвертирования QSP-файла в текстовый файл формата TXT2GAM
 </p>
 <p>
@@ -76,7 +76,7 @@ QSP-Анализатор — программа для анализа кода
 На официальном сайте:
 </p>
 <p>
-	<a href="https://qsp.org/index.php?option=com_content&view=article&id=64&Itemid=87" style="text-decoration:none;" class="emFOLD">https://qsp.org/index.php?...&Itemid=87</a>
+	<a href="https://qsp.org/index.php?option=com_content&amp;view=article&amp;id=64&amp;Itemid=87" style="text-decoration:none;" class="emFOLD">https://qsp.org/index.php?...&amp;Itemid=87</a>
 </p>
 <h6 id="quest-player-fork-ot-seedhartha-dlia-android--pleer-dlia-android">Quest Player fork от SeedHartha для Android | Плеер для Андроид</h6><p>
 Репозиторий: <a href="https://github.com/seedhartha/QuestPlayer" style="text-decoration:none;" class="emFOLD">GitHub/seedhartha/QuestPlayer</a>
@@ -142,7 +142,7 @@ QSP-Анализатор — программа для анализа кода
 Демка с тремя играми: <a href="https://qspfoundation.github.io/qspider" style="text-decoration:none;" class="emFOLD">qspfoundation.github.io/qspider</a>
 </p>
 <p>
-Статья по работе с плеером: <a href="https://m.vk.com/@qsplayer-qspider-v-0120-svodnaya-statya?context=author_page_date&ref=author_page" style="text-decoration:none;" class="emFOLD">vk.com/qSpider v.0.12.0</a>, <a href="https://discord.com/channels/373163463842725891/994958390524657685/994967462871306280" style="text-decoration:none;" class="emFOLD">medium/qSpider v.0.12.0</a>
+Статья по работе с плеером: <a href="https://m.vk.com/@qsplayer-qspider-v-0120-svodnaya-statya?context=author_page_date&amp;ref=author_page" style="text-decoration:none;" class="emFOLD">vk.com/qSpider v.0.12.0</a>, <a href="https://discord.com/channels/373163463842725891/994958390524657685/994967462871306280" style="text-decoration:none;" class="emFOLD">medium/qSpider v.0.12.0</a>
 </p>
 <p>
 Видеоурок по работе с плеером: <a href="https://youtu.be/bEjRzTDsPp4" style="text-decoration:none;" class="emFOLD">https://youtu.be/bEjRzTDsPp4</a>
@@ -154,20 +154,20 @@ QSP-Анализатор — программа для анализа кода
 Необходимо зайти на <a href="https://discord.gg/KYCXC2R2W6" style="text-decoration:none;" class="emFOLD">сервер интерактивной литературы в дискорде</a> и затем пройти по этой ссылке: <a href="https://discord.com/channels/373163463842725891/373188009715040266/997120867769253939" style="text-decoration:none;" class="emFOLD">discord/getGraphTool</a>
 </p>
 <h6 id="temy-i-stat_i-s-razlichnymi-resheniiami-na-qsp-forum-qsporg">Темы и статьи с различными решениями на QSP (форум QSP.org)</h6><ul>
-<li><a href="https://qsp.org/index.php?option=com_agora&task=topic&id=316&Itemid=57" style="text-decoration:none;" class="emFOLD">F.A.Q общие вопросы и некоторые примеры</a></li>
-<li><a href="https://qsp.org/index.php?option=com_agora&task=topic&id=956&Itemid=57" style="text-decoration:none;" class="emFOLD">Календарь по методу счёта Юлианских дней</a></li>
-<li><a href="https://qsp.org/index.php?option=com_content&view=article&id=79:-10&catid=36:2009-02-19-06-11-21&Itemid=76" style="text-decoration:none;" class="emFOLD">Гибкий плейлист 1.0</a></li>
-<li><a href="https://qsp.org/index.php?option=com_content&view=article&id=70:qsp-inventory-advanced-lib-076&catid=36:2009-02-19-06-11-21&Itemid=76" style="text-decoration:none;" class="emFOLD">Библиотечка, дополняющая инвентарь</a></li>
-<li><a href="https://qsp.org/index.php?option=com_agora&task=topic&id=348&Itemid=57" style="text-decoration:none;" class="emFOLD">Действие по условию</a></li>
-<li><a href="https://qsp.org/index.php?option=com_agora&task=topic&id=164&Itemid=57" style="text-decoration:none;" class="emFOLD">Локализация классического плеера QSP v.5.7.0</a></li>
-<li><a href="https://qsp.org/index.php?option=com_agora&task=topic&id=861&Itemid=57" style="text-decoration:none;" class="emFOLD">Настройка окошек классического плеера с помощью qspgui.cfg</a></li>
+<li><a href="https://qsp.org/index.php?option=com_agora&amp;task=topic&amp;id=316&amp;Itemid=57" style="text-decoration:none;" class="emFOLD">F.A.Q общие вопросы и некоторые примеры</a></li>
+<li><a href="https://qsp.org/index.php?option=com_agora&amp;task=topic&amp;id=956&amp;Itemid=57" style="text-decoration:none;" class="emFOLD">Календарь по методу счёта Юлианских дней</a></li>
+<li><a href="https://qsp.org/index.php?option=com_content&amp;view=article&amp;id=79:-10&amp;catid=36:2009-02-19-06-11-21&amp;Itemid=76" style="text-decoration:none;" class="emFOLD">Гибкий плейлист 1.0</a></li>
+<li><a href="https://qsp.org/index.php?option=com_content&amp;view=article&amp;id=70:qsp-inventory-advanced-lib-076&amp;catid=36:2009-02-19-06-11-21&amp;Itemid=76" style="text-decoration:none;" class="emFOLD">Библиотечка, дополняющая инвентарь</a></li>
+<li><a href="https://qsp.org/index.php?option=com_agora&amp;task=topic&amp;id=348&amp;Itemid=57" style="text-decoration:none;" class="emFOLD">Действие по условию</a></li>
+<li><a href="https://qsp.org/index.php?option=com_agora&amp;task=topic&amp;id=164&amp;Itemid=57" style="text-decoration:none;" class="emFOLD">Локализация классического плеера QSP v.5.7.0</a></li>
+<li><a href="https://qsp.org/index.php?option=com_agora&amp;task=topic&amp;id=861&amp;Itemid=57" style="text-decoration:none;" class="emFOLD">Настройка окошек классического плеера с помощью qspgui.cfg</a></li>
 <li><a href="http://ifwiki.ru" style="text-decoration:none;" class="emFOLD">IFWiki о русской интерактивной литературе (текстовых играх)</a></li>
 <li><a href="https://urq.plut.info/texts" style="text-decoration:none;" class="emFOLD">Библиотека URQ</a></li>
 </ul>
 <h6 id="o-litsenziiah">О лицензиях</h6><ul>
 <li>О лицензии OFL: <a href="http://ru.wikipedia.org/wiki/OFL" style="text-decoration:none;" class="emFOLD">http://ru.wikipedia.org/wiki/OFL</a></li>
 <li><a href="https://creativecommons.org/licenses/?lang=ru" style="text-decoration:none;" class="emFOLD">Лицензия Creative Commons, она же CC, и ее разновидности</a></li>
-<li><a href="https://qsp.org/index.php?option=com_agora&task=topic&id=398&Itemid=57" style="text-decoration:none;" class="emFOLD">Что такое Royalty-Free</a></li>
+<li><a href="https://qsp.org/index.php?option=com_agora&amp;task=topic&amp;id=398&amp;Itemid=57" style="text-decoration:none;" class="emFOLD">Что такое Royalty-Free</a></li>
 </ul>
 <h6 id="pisatel_stvo">Писательство</h6><ul>
 <li><a href="https://www.timuroki.ink/thewritingdead" style="text-decoration:none;" class="emFOLD">Пишите живее! Бесплатный курс по защите ваших текстов от словесной мертвечины</a></li>
