--- a/pages/kak_delat__giperssylki_0036.html
+++ b/pages/kak_delat__giperssylki_0036.html
@@ -29,7 +29,7 @@
 О:
 </p>
 <p>
-Гиперссылки в QSP делаются точно так же, как и в HTML-документах, то есть с использованием тегов `<a>` и `</a>`.
+Гиперссылки в QSP делаются точно так же, как и в HTML-документах, то есть с использованием тегов `&lt;a&gt;` и `&lt;/a&gt;`.
 </p>
 <p>
 Например так:
