--- a/pages/kak_dobavit__predmet_v_okno_predmetov_0088.html
+++ b/pages/kak_dobavit__predmet_v_okno_predmetov_0088.html
@@ -44,13 +44,13 @@
 <span class="Monokai-SysVar">usehtml</span><span class="Monokai-Operator">=</span><span class="Monokai-Numeric">1</span><br/>
 </div>
 <p>
-Далее добавляем предмет с картинкой, используя тег `<img>`. В атрибуте `src` этого тега указываем путь к файлу картинки:
+Далее добавляем предмет с картинкой, используя тег `&lt;img&gt;`. В атрибуте `src` этого тега указываем путь к файлу картинки:
 </p>
 <div class="Monokai-Code">
 <span class="Monokai-Operator">addobj</span>&nbsp;<span class="Monokai-String">"&lt;img&nbsp;scr='img/screw.png'&gt;&nbsp;Отвёртка"</span><br/>
 </div>
 <p>
-Обратите внимание. Хотя при этом на экране мы будем видеть картинку и слово "Отвёртка", названием предмета будет вся строка "<img scr='img/screw.png'> Отвёртка".
+Обратите внимание. Хотя при этом на экране мы будем видеть картинку и слово "Отвёртка", названием предмета будет вся строка "&lt;img scr='img/screw.png'&gt; Отвёртка".
 </p>
 <div style="display:flex;justify-content:space-between;"><div><a href="https://aleksversus.github.io/howdo_faq/pages/ne_rabotajut_drobnye_chisla_0087.html" class="emHREFTT">&lt; Назад, к странице 86</a></div><div><a href="https://aleksversus.github.io/howdo_faq/pages/kak_udalit__predmet_0089.html" class="emHREFTT">Вперёд, к странице 88 &gt;</a></div></div>
 <!-- body end -->
