--- a/pages/kak_izmenit__format_chasti_teksta_0054.html
+++ b/pages/kak_izmenit__format_chasti_teksta_0054.html
@@ -41,7 +41,7 @@
 <span class="Monokai-Operator">*</span><span class="Monokai-Operator">pl</span>&nbsp;<span class="Monokai-String">"В&nbsp;этой&nbsp;строке&nbsp;несколько&nbsp;слов&nbsp;будут&nbsp;&lt;b&gt;написаны&nbsp;полужирным&nbsp;шрифтом&lt;/b&gt;."</span><br/>
 </div>
 <p>
-Чтобы изменить цвет, размер или непосредственно сам шрифт части текста, нужно использовать теги `<font>` и `</font>` с соответствующими атрибутами:
+Чтобы изменить цвет, размер или непосредственно сам шрифт части текста, нужно использовать теги `&lt;font&gt;` и `&lt;/font&gt;` с соответствующими атрибутами:
 </p>
 <div class="Monokai-Code">
 <span class="Monokai-Operator"></span><span class="Monokai-Comment">!&nbsp;выводим&nbsp;часть&nbsp;текста&nbsp;красным&nbsp;цветом</span><br/>
@@ -64,10 +64,10 @@
 Обратите внимание: теги нужно закрывать в последовательности обратной открыванию.
 </p>
 <p>
-То есть, если сначала шёл открывающий тег `<b>`, а затем тег `<i>`, закрывающие теги должны идти в такой последовательности: сначала тег `</i>`, затем `</b>`.
+То есть, если сначала шёл открывающий тег `&lt;b&gt;`, а затем тег `&lt;i&gt;`, закрывающие теги должны идти в такой последовательности: сначала тег `&lt;/i&gt;`, затем `&lt;/b&gt;`.
 </p>
 <p>
-В qSpider необходимо использовать теги более соответствующие текущим нормативам HTML. Вместо тегов <b> и <i> лучше использовать теги <strong> и <em>. Вместо тега <font> — тег <span> со стилизацией.
+В qSpider необходимо использовать теги более соответствующие текущим нормативам HTML. Вместо тегов &lt;b&gt; и &lt;i&gt; лучше использовать теги &lt;strong&gt; и &lt;em&gt;. Вместо тега &lt;font&gt; — тег &lt;span&gt; со стилизацией.
 </p>
 <div style="display:flex;justify-content:space-between;"><div><a href="https://aleksversus.github.io/howdo_faq/pages/kak_izmenit__tsvet_fona_v_igre_0053.html" class="emHREFTT">&lt; Назад, к странице 54</a></div><div><a href="https://aleksversus.github.io/howdo_faq/pages/kak_sdelat__krasivyj_fon_v_klassicheskom_pleere_0055.html" class="emHREFTT">Вперёд, к странице 56 &gt;</a></div></div>
 <!-- body end -->
