--- a/pages/kak_izmenit__tsvet_giperssylok_0037.html
+++ b/pages/kak_izmenit__tsvet_giperssylok_0037.html
@@ -33,7 +33,7 @@
 `rgb` — функция, которая преобразует три составляющие цвета в формат понятный QSP. Значения составляющих прописываем аргументами функции в порядке: красный, зелёный, синий.
 </p>
 <p>
-Если Вам нужно изменить цвет отдельной гиперссылки, не трогая цвета остальных, можно воспользоваться тегом `<font>`:
+Если Вам нужно изменить цвет отдельной гиперссылки, не трогая цвета остальных, можно воспользоваться тегом `&lt;font&gt;`:
 </p>
 <div class="Monokai-Code">
 <span class="Monokai-Operator">*</span><span class="Monokai-Operator">pl</span>&nbsp;<span class="Monokai-String">"&lt;a&nbsp;href='...'&gt;&lt;font&nbsp;color=#008888&gt;ссылка&nbsp;бирюзового&nbsp;цвета&lt;/font&gt;&lt;/a&gt;"</span><br/>
