--- a/pages/kak_ogranichit__razmer_vyvodimogo_izobrazhenija_0107.html
+++ b/pages/kak_ogranichit__razmer_vyvodimogo_izobrazhenija_0107.html
@@ -23,7 +23,7 @@
 О:
 </p>
 <p>
-Для того, чтобы ограничить размер изображения, используйте атрибуты `width` и `height` для тега `<img>`:
+Для того, чтобы ограничить размер изображения, используйте атрибуты `width` и `height` для тега `&lt;img&gt;`:
 </p>
 <div class="Monokai-Code">
 <span class="Monokai-Operator"></span><span class="Monokai-Comment">!&nbsp;выводит&nbsp;картинку&nbsp;шириной&nbsp;и&nbsp;высотой&nbsp;в&nbsp;100&nbsp;пикселей</span><br/>
