--- a/pages/kak_raspolozhit__kartinku_i_tekst_na_stranitse_0106.html
+++ b/pages/kak_raspolozhit__kartinku_i_tekst_na_stranitse_0106.html
@@ -47,7 +47,7 @@
 <span class="Monokai-Operator">*</span><span class="Monokai-Operator">p</span>&nbsp;<span class="Monokai-String">'&lt;/table&gt;'</span><br/>
 </div>
 <p>
-В qSpider можно использовать блоки `<div>`, послойный вывод, флексы, гриды и прочее.
+В qSpider можно использовать блоки `&lt;div&gt;`, послойный вывод, флексы, гриды и прочее.
 </p>
 <div style="display:flex;justify-content:space-between;"><div><a href="https://aleksversus.github.io/howdo_faq/pages/plavnyj_perehod_mezhdu_lokatsijami_0105.html" class="emHREFTT">&lt; Назад, к странице 104</a></div><div><a href="https://aleksversus.github.io/howdo_faq/pages/kak_ogranichit__razmer_vyvodimogo_izobrazhenija_0107.html" class="emHREFTT">Вперёд, к странице 106 &gt;</a></div></div>
 <!-- body end -->
