--- a/pages/kak_sdelat__smenjaemoe_izobrazhenie_0050.html
+++ b/pages/kak_sdelat__smenjaemoe_izobrazhenie_0050.html
@@ -29,7 +29,7 @@
 В первую очередь необходимо подготовить два изображения и поместить их в папку с игрой, либо во вложенную папку. Например, у нас есть изображения "солнечный_день.jpg" и "пасмурный_вечер.png", мы создали в папке с игрой папку "фон", и поместили эти изображения туда.
 </p>
 <p>
-Выводить изображения мы будем с помощью html-тега `<img>`, а сменять с помощью действия "Сменить изображение".
+Выводить изображения мы будем с помощью html-тега `&lt;img&gt;`, а сменять с помощью действия "Сменить изображение".
 </p>
 <p>
 В поле "выполнить при посещении" локации, на которой мы хотим вывести изображения, нужно прописать код с условиями:
