--- a/pages/kak_udalit__predmet_0089.html
+++ b/pages/kak_udalit__predmet_0089.html
@@ -29,7 +29,7 @@
 <span class="Monokai-Operator">delobj</span>&nbsp;<span class="Monokai-String">"Отвёртка"</span><br/>
 </div>
 <p>
-Если вы выводили картинку в названии предмета с помощью html, то частью названия предмета является и html-тег `<img>`, а значит удалять предмет нужно точно так же, полностью указывая название:
+Если вы выводили картинку в названии предмета с помощью html, то частью названия предмета является и html-тег `&lt;img&gt;`, а значит удалять предмет нужно точно так же, полностью указывая название:
 </p>
 <div class="Monokai-Code">
 <span class="Monokai-Operator">delobj</span>&nbsp;<span class="Monokai-String">"&lt;img&nbsp;scr='img/screw.png'&gt;&nbsp;Отвёртка"</span><br/>
