--- a/pages/kak_vstavit__kartinku_v_igru_0044.html
+++ b/pages/kak_vstavit__kartinku_v_igru_0044.html
@@ -74,7 +74,7 @@
 <span class="Monokai-SysVar">usehtml</span><span class="Monokai-Operator">=</span><span class="Monokai-Numeric">1</span><br/>
 </div>
 <p>
-	Изображения в html выводятся с помощью тега `<img>`. В атрибуте `src` этого тега прописывается путь к файлу картинки.
+	Изображения в html выводятся с помощью тега `&lt;img&gt;`. В атрибуте `src` этого тега прописывается путь к файлу картинки.
 </p>
 <p>
 	Например, мы хотим вывести изображение в окне основного описания:
