--- a/pages/kak_zadavat__razmer_okon_iz_koda_igry_0057.html
+++ b/pages/kak_zadavat__razmer_okon_iz_koda_igry_0057.html
@@ -26,7 +26,7 @@
 Нет. В классическом плеере этого сделать нельзя.
 </p>
 <p>
-Однако вы можете отказаться от всех окон, кроме окна основного описания, и манипулировать блоками уже непосредственно из кода игры. В классическом плеере это можно делать, верстая страницы с помощью таблиц (`<table>...</table>`), а в qSpider — используя все возможности html.
+Однако вы можете отказаться от всех окон, кроме окна основного описания, и манипулировать блоками уже непосредственно из кода игры. В классическом плеере это можно делать, верстая страницы с помощью таблиц (`&lt;table&gt;...&lt;/table&gt;`), а в qSpider — используя все возможности html.
 </p>
 <div style="display:flex;justify-content:space-between;"><div><a href="https://aleksversus.github.io/howdo_faq/pages/kak_nastroit__okna_0056.html" class="emHREFTT">&lt; Назад, к странице 57</a></div><div><a href="https://aleksversus.github.io/howdo_faq/pages/fiksatsija_okna_predprosmotra_0058.html" class="emHREFTT">Вперёд, к странице 59 &gt;</a></div></div>
 <!-- body end -->
