--- a/pages/kak_zatsiklit__melodiju_0034.html
+++ b/pages/kak_zatsiklit__melodiju_0034.html
@@ -76,7 +76,7 @@
 	и т.д.
 </p>
 <p>
-Или воспользуйтесь уже готовым решением в виде гибкого плейлиста: <a href="https://qsp.org/index.php?option=com_content&view=article&id=79:-10&catid=36:2009-02-19-06-11-21&Itemid=76" style="text-decoration:none;" class="emFOLD">открыть страницу в браузере</a>
+Или воспользуйтесь уже готовым решением в виде гибкого плейлиста: <a href="https://qsp.org/index.php?option=com_content&amp;view=article&amp;id=79:-10&amp;catid=36:2009-02-19-06-11-21&amp;Itemid=76" style="text-decoration:none;" class="emFOLD">открыть страницу в браузере</a>
 </p>
 <div style="display:flex;justify-content:space-between;"><div><a href="https://aleksversus.github.io/howdo_faq/pages/kak_priglushit__muzyku_0033.html" class="emHREFTT">&lt; Назад, к странице 34</a></div><div><a href="https://aleksversus.github.io/howdo_faq/pages/kak_sdelat__plejlist_0035.html" class="emHREFTT">Вперёд, к странице 36 &gt;</a></div></div>
 <!-- body end -->
