--- a/pages/map_area_0113.html
+++ b/pages/map_area_0113.html
@@ -23,22 +23,22 @@
 О:
 </p>
 <p>
-Чтобы выводить на экран изображение (тег `<img>`) и его разметку (теги `<map>` и `<area>`), необходимо в первую очередь включить распознавание HTML:
+Чтобы выводить на экран изображение (тег `&lt;img&gt;`) и его разметку (теги `&lt;map&gt;` и `&lt;area&gt;`), необходимо в первую очередь включить распознавание HTML:
 </p>
 <div class="Monokai-Code">
 <span class="Monokai-SysVar">usehtml</span><span class="Monokai-Operator">=</span><span class="Monokai-Numeric">1</span><br/>
 </div>
 <p>
-Далее с помощью тега `<img>` выводим на экран изображение:
+Далее с помощью тега `&lt;img&gt;` выводим на экран изображение:
 </p>
 <div class="Monokai-Code">
 <span class="Monokai-Operator">*</span><span class="Monokai-Operator">p</span>&nbsp;<span class="Monokai-String">"&lt;img&nbsp;src='путь&nbsp;к&nbsp;файлу&nbsp;изображения/картинка.jpg'&nbsp;usemap='#groundit'&gt;"</span><br/>
 </div>
 <p>
-В атрибуте `src` тега указываем путь к файлу изображения, а в атрибуте `usemap` прописываем символ `#` (решётка) и значение, вписанное в атрибут `name` тега `<map>`, о котором далее. Атрибут `usemap` — это своего рода ссылка на соответствующий тег `<map>`. Таким образом вы можете разметить несколько изображений, ссылаясь из тегов `<img>` на соответстующие контейнеры `<map>` с помощью атрибута `usemap`.
+В атрибуте `src` тега указываем путь к файлу изображения, а в атрибуте `usemap` прописываем символ `#` (решётка) и значение, вписанное в атрибут `name` тега `&lt;map&gt;`, о котором далее. Атрибут `usemap` — это своего рода ссылка на соответствующий тег `&lt;map&gt;`. Таким образом вы можете разметить несколько изображений, ссылаясь из тегов `&lt;img&gt;` на соответстующие контейнеры `&lt;map&gt;` с помощью атрибута `usemap`.
 </p>
 <p>
-Теги `<map>` и `<area>` используются для разметки кликабельных областей на изображении. Тег `<map>` является контейнером, объединяющим кликабельные области, каждая из которых описывается отдельным тегом `<area>`.
+Теги `&lt;map&gt;` и `&lt;area&gt;` используются для разметки кликабельных областей на изображении. Тег `&lt;map&gt;` является контейнером, объединяющим кликабельные области, каждая из которых описывается отдельным тегом `&lt;area&gt;`.
 </p>
 <div class="Monokai-Code">
 <span class="Monokai-Operator"></span><span class="Monokai-Comment">!&nbsp;открываем&nbsp;контейнер&nbsp;MAP,&nbsp;не&nbsp;забывая&nbsp;указать&nbsp;значение&nbsp;атрибуту&nbsp;name</span><br/>
@@ -57,7 +57,7 @@
 <span class="Monokai-Operator">*</span><span class="Monokai-Operator">p</span>&nbsp;<span class="Monokai-String">"&lt;/map&gt;"</span><br/>
 </div>
 <p>
-Итак, каждый тег `<area>` используется, чтобы описать отдельную кликабельную область изображения. Здесь мы используем следующие атрибуты:
+Итак, каждый тег `&lt;area&gt;` используется, чтобы описать отдельную кликабельную область изображения. Здесь мы используем следующие атрибуты:
 </p>
 <ul>
 <li><p>
