--- a/pages/ne_rabotaet_teg_0076.html
+++ b/pages/ne_rabotaet_teg_0076.html
@@ -26,7 +26,7 @@
 Если вы используете классическую версию плеера, и поддержка HTML включена, то скорее всего дело в том, что вы пытаетесь использовать HTML-тег, который не поддерживается плеером.
 </p>
 <p>
-В классическом плеере — собственный HTML-рендерер, который лишь отчасти соответствует браузерному. Даже не все синтаксические правила HTML работают. Например, запись "<1>" в браузерах не считается тегом и выводится как есть, тогда как рендерер классического плеера посчитает подобную запись тегом.
+В классическом плеере — собственный HTML-рендерер, который лишь отчасти соответствует браузерному. Даже не все синтаксические правила HTML работают. Например, запись "&lt;1&gt;" в браузерах не считается тегом и выводится как есть, тогда как рендерер классического плеера посчитает подобную запись тегом.
 </p>
 <p>
 Если рендерер классического плеера встречает "правильный" тег, то есть тот, который входит в его список поддерживаемых тегов, он форматирует элемент или страницу, или добавляет к странице элемент, согласно значению найденного тега. Если же рендерер классического плеера встречает "неправильный" тег, то есть тот, который не входит в его список поодерживаемых тегов, он просто игнорирует этот тег. На экране тег мы попросту не увидим.
