--- a/pages/ne_rabotaet_uslovie_(mnogostrochnoe)_0083.html
+++ b/pages/ne_rabotaet_uslovie_(mnogostrochnoe)_0083.html
@@ -44,7 +44,7 @@
 <span class="Monokai-Koperator">IF</span>&nbsp;<span class="Monokai-Operator">[</span><span class="Monokai-StartLoc">#выражение]:&nbsp;[команды&nbsp;1]</span><br/>
 </div>
 <p>
-Как видите, за ключевым словом `IF` следует выражение `[#выражение]`, и если это выражение верно, тогда выполняется набор команд `[команды 1]`, который записан после двоеточия в той же строке, что и `IF`. При этом команды перечисляются через амперсанд (`&`).
+Как видите, за ключевым словом `IF` следует выражение `[#выражение]`, и если это выражение верно, тогда выполняется набор команд `[команды 1]`, который записан после двоеточия в той же строке, что и `IF`. При этом команды перечисляются через амперсанд (`&amp;`).
 </p>
 <p>
 Код из примера в однострочной форме должен будет выглядеть так:
