--- a/pages/ne_rabotajut_tegi_map_i_area_0078.html
+++ b/pages/ne_rabotajut_tegi_map_i_area_0078.html
@@ -35,7 +35,7 @@
 <span class="Monokai-SysVar">usehtml</span><span class="Monokai-Operator">=</span><span class="Monokai-Numeric">1</span><br/>
 </div>
 <p>
-Во-вторых, все HTML-теги являются частью выводимого на экран текста, поэтому, чтобы выводить их на экран, нужно использовать те же самые операторы, что и для вывода всего остального текста. Таким образом и теги `<MAP>`, `<AREA>` и тег `<img>` нужно выводить с помощью операторов `*p` или `p`.
+Во-вторых, все HTML-теги являются частью выводимого на экран текста, поэтому, чтобы выводить их на экран, нужно использовать те же самые операторы, что и для вывода всего остального текста. Таким образом и теги `&lt;MAP&gt;`, `&lt;AREA&gt;` и тег `&lt;img&gt;` нужно выводить с помощью операторов `*p` или `p`.
 </p>
 <p>
 В-третьих, если вам удобнее записывать каждый тег отдельной строкой, нужно помнить, что QSP не игнорирует переводы строк между тегами, и это может привести к созданию артефактов. Все теги должны выводиться одной строкой, поэтому для записи команд, выводящих теги, используйте именно операторы `*p` и `p`.
