--- a/pages/obnovlenie_peremennyh_na_akrane_0131.html
+++ b/pages/obnovlenie_peremennyh_na_akrane_0131.html
@@ -53,7 +53,7 @@ health<span class="Monokai-Operator">=</span>health<span class="Monokai-Operator
 Происходит следующее:
 </p>
 <ol>
-<li>Плеер видит оператор `pl` и понимает, что ему нужно вывести некий текст в окно дополнительного описания. Данный текст плееру передан в виде конкретного значения, однако в этом значении присутствует подвыражение "<<health>>" (так же оно называется вложенным выражением).</li>
+<li>Плеер видит оператор `pl` и понимает, что ему нужно вывести некий текст в окно дополнительного описания. Данный текст плееру передан в виде конкретного значения, однако в этом значении присутствует подвыражение "&lt;&lt;health&gt;&gt;" (так же оно называется вложенным выражением).</li>
 <li><p>
 Плеер "раскрывает" подвыражение. То есть вычисляет его значение и подставляет это значение вместо подвыражения в строку. Например, если значение переменной `health` в этот момент было равно 50, плеер подставит число 50 вместо подвыражения, и теперь команда будет для него выглядеть так:</p>
 <div class="Monokai-Code">
