--- a/pages/otladchik_0129.html
+++ b/pages/otladchik_0129.html
@@ -53,10 +53,10 @@
 и нажимаете клавишу "enter".
 </p>
 <p>
-Если вы хотите самостоятельно написать отладчик с более широкими возможностями, ознакомьтесь с видеоуроком от Aleks Versus <a href="https://www.youtube.com/watch?v=dVtRAlhLY2E&t=1967s" style="text-decoration:none;" class="emFOLD">"Отладчик"</a>.
+Если вы хотите самостоятельно написать отладчик с более широкими возможностями, ознакомьтесь с видеоуроком от Aleks Versus <a href="https://www.youtube.com/watch?v=dVtRAlhLY2E&amp;t=1967s" style="text-decoration:none;" class="emFOLD">"Отладчик"</a>.
 </p>
 <p>
-Так же можете воспользоваться уже готовым решением и скачать <a href="https://qsp.org/index.php?option=com_content&id=71&Itemid=56" style="text-decoration:none;" class="emFOLD">отладчик от WEREWOLF</a>
+Так же можете воспользоваться уже готовым решением и скачать <a href="https://qsp.org/index.php?option=com_content&amp;id=71&amp;Itemid=56" style="text-decoration:none;" class="emFOLD">отладчик от WEREWOLF</a>
 </p>
 <div style="display:flex;justify-content:space-between;"><div><a href="https://aleksversus.github.io/howdo_faq/pages/propustit__glavy_0128.html" class="emHREFTT">&lt; Назад, к странице 127</a></div><div><a href="https://aleksversus.github.io/howdo_faq/pages/na_kakom_ustrojstve_0130.html" class="emHREFTT">Вперёд, к странице 129 &gt;</a></div></div>
 <!-- body end -->
