--- a/pages/predmet_v_vide_kartinki_0094.html
+++ b/pages/predmet_v_vide_kartinki_0094.html
@@ -35,13 +35,13 @@
 <span class="Monokai-SysVar">usehtml</span><span class="Monokai-Operator">=</span><span class="Monokai-Numeric">1</span><br/>
 </div>
 <p>
-И добавляем предметы, названия которых целиком представляют собой тег `<img>` со ссылкой на картинку в атрибуте `src`:
+И добавляем предметы, названия которых целиком представляют собой тег `&lt;img&gt;` со ссылкой на картинку в атрибуте `src`:
 </p>
 <div class="Monokai-Code">
 <span class="Monokai-Operator">addobj</span>&nbsp;<span class="Monokai-String">'&lt;img&nbsp;src="img/screw.png"&gt;'</span><br/>
 </div>
 <p>
-Если по какой-либо причине вы не хотите в названии использовать тег `<img>`, а картинку добавляете с помощью второго аргумента к `addobj`, при включенном html можно заворачивать название предмета в угловые скобки:
+Если по какой-либо причине вы не хотите в названии использовать тег `&lt;img&gt;`, а картинку добавляете с помощью второго аргумента к `addobj`, при включенном html можно заворачивать название предмета в угловые скобки:
 </p>
 <div class="Monokai-Code">
 <span class="Monokai-Operator">addobj</span>&nbsp;<span class="Monokai-String">"&lt;Отвёртка&gt;"</span><span class="Monokai-Operator">,</span><span class="Monokai-String">"img/screw.png"</span><br/>
@@ -53,7 +53,7 @@
 <span class="Monokai-Operator">addobj</span>&nbsp;<span class="Monokai-String">"&lt;a&nbsp;title='Отвёртка'&gt;&lt;/a&gt;"</span><span class="Monokai-Operator">,</span><span class="Monokai-String">"img/screw.png"</span><br/>
 </div>
 <p>
-Хотя проще вставить картинку тегом `<img>` прямо в название.
+Хотя проще вставить картинку тегом `&lt;img&gt;` прямо в название.
 </p>
 <div style="display:flex;justify-content:space-between;"><div><a href="https://aleksversus.github.io/howdo_faq/pages/kak_delat__schitaeye_predmety_0093.html" class="emHREFTT">&lt; Назад, к странице 92</a></div><div><a href="https://aleksversus.github.io/howdo_faq/pages/vypolnenie_koda_pri_schelchke_po_predmetu_0095.html" class="emHREFTT">Вперёд, к странице 94 &gt;</a></div></div>
 <!-- body end -->
