--- a/pages/qsp-keyword_0176.html
+++ b/pages/qsp-keyword_0176.html
@@ -65,7 +65,7 @@ $AAA<span class="Monokai-Operator">+</span><span class="Monokai-String">'989'</s
 `!` — оператор комментария. То, что находится в строке после оператора комментария, и до конца строки игнорируется интерпретатором. Оператор комментария позволяет "закомментировать" (выключить) ненужный временно оператор / функцию во время отладки игры. Кроме того, написание комментариев к коду программы является одним из признаков хорошего стиля программирования.
 </p>
 <p>
-	Необходимо чётко понимать, что это именно оператор, поэтому если вы комментируете некую строку кода, то `!` должен стоять после `&`:
+	Необходимо чётко понимать, что это именно оператор, поэтому если вы комментируете некую строку кода, то `!` должен стоять после `&amp;`:
 </p>
 <div class="Monokai-Code">
 <span class="Monokai-Operator">*</span><span class="Monokai-Operator">pl</span>&nbsp;<span class="Monokai-String">"Hello,&nbsp;world!"</span>&nbsp;<span class="Monokai-Operator">&amp;&nbsp;</span><span class="Monokai-Comment">!&nbsp;комментарий</span><br/>
@@ -543,7 +543,7 @@ $code&nbsp;<span class="Monokai-Operator">=</span>&nbsp;<span class="Monokai-Ope
 <span class="Monokai-Koperator">IF</span>&nbsp;<span class="Monokai-Operator">[</span><span class="Monokai-StartLoc">#выражение]:&nbsp;[команда&nbsp;1]&nbsp;&amp;&nbsp;[команда&nbsp;2]&nbsp;&amp;&nbsp;...</span><br/>
 </div>
 <p>
-	Как видите, за ключевым словом `if` следует выражение `[#выражение]`, и если это выражение верно, тогда выполняется набор команд `[команда 1]`, `[команда 2]`, и т.д., которые записаны после двоеточия в той же строке. При этом команды перечисляются через амперсанд (`&`).
+	Как видите, за ключевым словом `if` следует выражение `[#выражение]`, и если это выражение верно, тогда выполняется набор команд `[команда 1]`, `[команда 2]`, и т.д., которые записаны после двоеточия в той же строке. При этом команды перечисляются через амперсанд (`&amp;`).
 </p>
 <p>
 	Именно по наличию команд сразу в той же строке после двоеточия плеер определяет, что это однострочная форма, и считает конец этой строки концом конструкции условия.
