--- a/pages/qsp-keyword_0178.html
+++ b/pages/qsp-keyword_0178.html
@@ -367,7 +367,7 @@ $text<span class="Monokai-Operator">=</span><span class="Monokai-String">'&lt;&l
 <span class="Monokai-SysVar">fcolor</span><span class="Monokai-Operator">=</span><span class="Monokai-Func">rgb</span><span class="Monokai-Operator">(</span><span class="Monokai-Numeric">0</span><span class="Monokai-Operator">,</span><span class="Monokai-Numeric">255</span><span class="Monokai-Operator">,</span><span class="Monokai-Numeric">0</span><span class="Monokai-Operator">)</span><br/>
 </div>
 <h4 id="faq_80_04_fsize">FSIZE</h4><p>
-`FSIZE` —  содержит размер используемого в данный момент шрифта. Если равна 0, то используется размер, заданный в настройках программы. Относительно данного значения в HTML-режиме вычисляются размеры шрифтов тега `<font>`. Пример:
+`FSIZE` —  содержит размер используемого в данный момент шрифта. Если равна 0, то используется размер, заданный в настройках программы. Относительно данного значения в HTML-режиме вычисляются размеры шрифтов тега `&lt;font&gt;`. Пример:
 </p>
 <div class="Monokai-Code">
 <span class="Monokai-SysVar">fsize</span><span class="Monokai-Operator">=</span><span class="Monokai-Numeric">18</span><br/>
