--- a/pages/qsp-keyword_0179.html
+++ b/pages/qsp-keyword_0179.html
@@ -79,7 +79,7 @@
 <span class="Monokai-Koperator">end</span>&nbsp;<span class="Monokai-Koperator">act</span><br/>
 </div>
 <p>
-	Вообще, после ключевого слова `end` допускается, но не одобряется, запись любого текста. При этом игнорируется весь текст до следующей команды. Если команда записывается в той же строке, что и `end`, то эта команда должна стоять после амперсанда (`&`):
+	Вообще, после ключевого слова `end` допускается, но не одобряется, запись любого текста. При этом игнорируется весь текст до следующей команды. Если команда записывается в той же строке, что и `end`, то эта команда должна стоять после амперсанда (`&amp;`):
 </p>
 <div class="Monokai-Code">
 <span class="Monokai-Operator"></span><span class="Monokai-Comment">!&nbsp;открываем&nbsp;действие</span><br/>
@@ -117,7 +117,7 @@
 <span class="Monokai-Operator">:</span>метка&nbsp;с&nbsp;прилегающими&nbsp;пробелами<br/>
 </div>
 <p>
-	Непосредственно после метки, в той же строке, через амперсанд (`&`) могут идти любые другие команды, однако так делать не рекомендуется.
+	Непосредственно после метки, в той же строке, через амперсанд (`&amp;`) могут идти любые другие команды, однако так делать не рекомендуется.
 </p>
 <div class="Monokai-Code">
 <span class="Monokai-Operator"></span><span class="Monokai-Comment">!&nbsp;метка&nbsp;с&nbsp;командами&nbsp;после&nbsp;неё</span><br/>
@@ -151,8 +151,8 @@
 <p>
 	Случайные метки, то есть метки, на которые в текущем блоке кода нет перехода с помощью `jump`, просто игнорируются интерпретатором.
 </p>
-<h4 id="faq_80_05_ampersand">Амперсанд `&`</h4><p>
-`&` — символ амперсанда служит для перечисления команд в одной строке. Общая запись:
+<h4 id="faq_80_05_ampersand">Амперсанд `&amp;`</h4><p>
+`&amp;` — символ амперсанда служит для перечисления команд в одной строке. Общая запись:
 </p>
 <div class="Monokai-Code">
 <span class="Monokai-Operator">[</span>команда&nbsp;<span class="Monokai-Numeric">1</span><span class="Monokai-Operator">]</span>&nbsp;<span class="Monokai-Operator">&amp;</span>&nbsp;<span class="Monokai-Operator">[</span>команда&nbsp;<span class="Monokai-Numeric">2</span><span class="Monokai-Operator">]</span>&nbsp;<span class="Monokai-Operator">&amp;</span>&nbsp;...<br/>
