--- a/pages/skol_ko_peremennyh_0154.html
+++ b/pages/skol_ko_peremennyh_0154.html
@@ -26,10 +26,10 @@
 Специальной команды для этого нет. Названия всех явно заданных переменных можно просмотреть, если воспользоваться специальным Анализатором кода QSP.
 </p>
 <p>
-	<a href="https://qsp.org/index.php?option=com_agora&task=topic&id=365&Itemid=57" style="text-decoration:none;" class="emFOLD">Страница анализатора кода на qsp.su</a>
+	<a href="https://qsp.org/index.php?option=com_agora&amp;task=topic&amp;id=365&amp;Itemid=57" style="text-decoration:none;" class="emFOLD">Страница анализатора кода на qsp.su</a>
 </p>
 <p>
-Для того, чтобы получить список переменных, нужно сначала сконвертировать игру в формат TXT2GAM. TXT2GAM — это обычные текстовые файлы, в которых код игры прописан в незашифрованном виде по особым правилам. Пример можно посмотреть <a href="https://wiki.qsp.org/help:txt2gam" style="text-decoration:none;" class="emFOLD">в справке</a>, а научиться писать игры в формате TXT2GAM можно, используя вот эти уроки: <a href="https://qsp.org/index.php?option=com_content&view=article&id=91&Itemid=56" style="text-decoration:none;" class="emFOLD">страница на qsp.su</a>.
+Для того, чтобы получить список переменных, нужно сначала сконвертировать игру в формат TXT2GAM. TXT2GAM — это обычные текстовые файлы, в которых код игры прописан в незашифрованном виде по особым правилам. Пример можно посмотреть <a href="https://wiki.qsp.org/help:txt2gam" style="text-decoration:none;" class="emFOLD">в справке</a>, а научиться писать игры в формате TXT2GAM можно, используя вот эти уроки: <a href="https://qsp.org/index.php?option=com_content&amp;view=article&amp;id=91&amp;Itemid=56" style="text-decoration:none;" class="emFOLD">страница на qsp.su</a>.
 </p>
 <p>
 Чтобы сконвертировать игру в формат TXT2GAM необходимо открыть её в редакторе Quest Generator и выбрать в меню "Игра" пункты "Экспорт — Текстовый файл формата TXT2GAM...".
