--- a/pages/tekst_snizu_vverh_0132.html
+++ b/pages/tekst_snizu_vverh_0132.html
@@ -23,7 +23,7 @@
 О:
 </p>
 <p>
-В классическом плеере нет поддержки атрибута вертикального выравнивания `valign` для ячеек таблиц. Поэтому такой метод не сработает. К тому же атрибут `height` в классическом плеере так же не работает, и невозможно стилизовать ячейку, не говоря о блоке `<div>`. Поэтому в классическом плеере приходится использовать костыль: добивать пустые строки перед строкой, которая должна выводиться снизу.
+В классическом плеере нет поддержки атрибута вертикального выравнивания `valign` для ячеек таблиц. Поэтому такой метод не сработает. К тому же атрибут `height` в классическом плеере так же не работает, и невозможно стилизовать ячейку, не говоря о блоке `&lt;div&gt;`. Поэтому в классическом плеере приходится использовать костыль: добивать пустые строки перед строкой, которая должна выводиться снизу.
 </p>
 <div style="display:flex;justify-content:space-between;"><div><a href="https://aleksversus.github.io/howdo_faq/pages/obnovlenie_peremennyh_na_akrane_0131.html" class="emHREFTT">&lt; Назад, к странице 130</a></div><div><a href="https://aleksversus.github.io/howdo_faq/pages/vozvrat_na_predyduschuju_lokatsiju_0133.html" class="emHREFTT">Вперёд, к странице 132 &gt;</a></div></div>
 <!-- body end -->
