--- a/pages/vyvod_tovarov_v_vide_tablitsy_0109.html
+++ b/pages/vyvod_tovarov_v_vide_tablitsy_0109.html
@@ -83,7 +83,7 @@ number_half<span class="Monokai-Operator">=</span>kolvo&nbsp;<span class="Monoka
 <span class="Monokai-Operator">*</span><span class="Monokai-Operator">p</span>&nbsp;<span class="Monokai-String">'&lt;/table&gt;'</span><br/>
 </div>
 <p>
-В qSpider то же самое можно сделать, используя блоки `<div>`.
+В qSpider то же самое можно сделать, используя блоки `&lt;div&gt;`.
 </p>
 <div style="display:flex;justify-content:space-between;"><div><a href="https://aleksversus.github.io/howdo_faq/pages/kak_sdelat__ramku_okna_osnovnogo_opisanija_0108.html" class="emHREFTT">&lt; Назад, к странице 107</a></div><div><a href="https://aleksversus.github.io/howdo_faq/pages/mozhno_li_zerkal_no_otrazit__kartinku_0110.html" class="emHREFTT">Вперёд, к странице 109 &gt;</a></div></div>
 <!-- body end -->
