--- a/informarch/video_0038.html
+++ b/informarch/video_0038.html
@@ -36,13 +36,13 @@
 </p>
 <ol>
 <li>Положить видеофайл в папку с игрой, или во вложенную папку.</li>
-<li>Прописать в игре контейнер для видео с помощью тегов <span class="em_BLCK"><video></span> и <span class="em_BLCK"><source></span>.</li>
+<li>Прописать в игре контейнер для видео с помощью тегов <span class="em_BLCK">&lt;video&gt;</span> и <span class="em_BLCK">&lt;source&gt;</span>.</li>
 </ol>
 <p>
-В первую очередь давайте рассмотрим второй пункт, ведь именно теги <span class="em_BLCK"><video></span> и <span class="em_BLCK"><source></span> выводят видео в нашей игре.
+В первую очередь давайте рассмотрим второй пункт, ведь именно теги <span class="em_BLCK">&lt;video&gt;</span> и <span class="em_BLCK">&lt;source&gt;</span> выводят видео в нашей игре.
 </p>
 <p>
-Тег <span class="em_BLCK"><video></span> по сути представляет собой контейнер, внутри которого перечисляются источники, из которых браузер (а в нашем случае плеер) будет подгружать видеофайл. В общем виде в Quest Navigator видео в игру мы вставляем так:
+Тег <span class="em_BLCK">&lt;video&gt;</span> по сути представляет собой контейнер, внутри которого перечисляются источники, из которых браузер (а в нашем случае плеер) будет подгружать видеофайл. В общем виде в Quest Navigator видео в игру мы вставляем так:
 </p>
 <div class="Monokai-Code">
 <span class="Monokai-Operator"></span><span class="Monokai-Comment">!&nbsp;открываем&nbsp;контейнер&nbsp;VIDEO</span><br/>
@@ -57,7 +57,7 @@
 Мы указываем несколько источников на случай, если один не будет воспроизводиться. Однако, это не обязательно. Quest Navigator прекрасно воспроизводит webM, поэтому достаточно использовать только один файл видео формата webM и только один источник соответственно в коде HTML.
 </p>
 <p>
-Вот вроде бы и всё. В тегах <span class="em_BLCK"><source></span> прописаны относительные пути, согласно первому пункту мы кладём в папку с игрой папку "video", в неё помещаем наши видеофайлы и ожидаем, что Quest Navigator будет эти видеофайлы воспроизводить. Однако данный способ не сработает. Вместо непосредственно видео мы увидим чёрный прямоугольник и (возможно) кнопки управления.
+Вот вроде бы и всё. В тегах <span class="em_BLCK">&lt;source&gt;</span> прописаны относительные пути, согласно первому пункту мы кладём в папку с игрой папку "video", в неё помещаем наши видеофайлы и ожидаем, что Quest Navigator будет эти видеофайлы воспроизводить. Однако данный способ не сработает. Вместо непосредственно видео мы увидим чёрный прямоугольник и (возможно) кнопки управления.
 </p>
 <p>
 К сожалению, нам недостаточно просто положить видео в папку с игрой, Quest Navigator не будет его воспроизводить.
