--- a/pages/chem_otlichajutsja_dve_komandy_0006.html
+++ b/pages/chem_otlichajutsja_dve_komandy_0006.html
@@ -16,7 +16,7 @@
             <h1>Онлайн-справочник по самым часто задаваемым вопросам из темы "<a href="https://qsp.org/index.php?option=com_agora&task=topic&id=40&Itemid=57">Как сделать?</a>" на форуме <a href="https://qsp.org/index.php?option=com_agora&Itemid=57" title="перейти на форум" target="_blank">QSP.su</a></h1>
             <!-- body start -->
 <div style="display:flex;justify-content:space-between;"><div><a href="https://aleksversus.github.io/howdo_faq/pages/v_chiom_raznitsa_s_zviozdochka-pl_i_bez_0005.html" class="emHREFTT">&lt; Назад, к странице 6</a></div><div><a href="https://aleksversus.github.io/howdo_faq/pages/v_chiom_raznitsa_mezhdu_dynamic_i_dyneval_0007.html" class="emHREFTT">Вперёд, к странице 8 &gt;</a></div></div>
-<h3 id="faq_01_05">1.5. Чем отличаются эти две команды? `<em>pl "<<$perem>>"` и `</em>pl $perem`</h3><p>
+<h3 id="faq_01_05">1.5. Чем отличаются эти две команды? `<em>pl "&lt;&lt;$perem&gt;&gt;"` и `</em>pl $perem`</h3><p>
 В: Чем отличаются эти две команды?
 </p>
 <div class="Monokai-Code">
