--- a/pages/kak_sdelat__klikabel_noe_izobrazhenie_0049.html
+++ b/pages/kak_sdelat__klikabel_noe_izobrazhenie_0049.html
@@ -32,7 +32,7 @@
 <span class="Monokai-SysVar">usehtml</span><span class="Monokai-Operator">=</span><span class="Monokai-Numeric">1</span><br/>
 </div>
 <p>
-Далее выводим картинку с помощью html-тега `<img>`. Путь к файлу картинки прописываем в атрибуте `src` этого тега:
+Далее выводим картинку с помощью html-тега `&lt;img&gt;`. Путь к файлу картинки прописываем в атрибуте `src` этого тега:
 </p>
 <div class="Monokai-Code">
 <span class="Monokai-Operator">*</span><span class="Monokai-Operator">pl</span>&nbsp;<span class="Monokai-String">"&lt;img&nbsp;src='images/picture.png'&gt;"</span><br/>
