--- a/pages/kak_vstavit__kartinku_v_dejstvie_0046.html
+++ b/pages/kak_vstavit__kartinku_v_dejstvie_0046.html
@@ -32,7 +32,7 @@
 <span class="Monokai-SysVar">usehtml</span><span class="Monokai-Operator">=</span><span class="Monokai-Numeric">1</span><br/>
 </div>
 <p>
-Теперь в названия действий можно вставлять изображения с помощью тега `<img>`. В атрибуте `src` этого тега прописывается путь к файлу картинки:
+Теперь в названия действий можно вставлять изображения с помощью тега `&lt;img&gt;`. В атрибуте `src` этого тега прописывается путь к файлу картинки:
 </p>
 <div class="Monokai-Code">
 <span class="Monokai-Koperator">act</span>&nbsp;<span class="Monokai-String">"&lt;img&nbsp;src='путь&nbsp;к&nbsp;файлу&nbsp;картинки/картинка.jpg'&gt;&nbsp;Выйти&nbsp;на&nbsp;улицу."</span><span class="Monokai-Operator">:</span><br/>
